New Crowdin updates (#1755)

--- a/app/i18n/locales/cs-CZ.json
+++ b/app/i18n/locales/cs-CZ.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "Tato API metoda není ještě implementována.",
   "api.errors.GenericApiError": "Vyskytla se chyba, zkuste to prosím později.",
   "api.errors.IncorrectPasswordError": "Nesprávné heslo k peněžence.",
-  "api.errors.NotEnoughMoneyToSendError": "Nedostatek ADA k provedení této transakce.",
+  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
   "api.errors.PromiseNotCalledYetError": "Výsledek zpřístupněn před dokončením příkazu.",
   "api.errors.ReportRequestError": "Při odesílání požadavku na podporu se vyskytl problém.",
   "api.errors.WalletAlreadyImportedError": "Peněženka, kterou se snažíte importovat, již existuje.",
@@ -128,7 +128,6 @@
   "global.passwordInstructionsPaperWallet": "Note: Paper Wallet password needs to be at least <strong>10 characters</strong> long.",
   "global.staleTxnWarningLine1": "Your wallet has changed since you created this transaction.",
   "global.staleTxnWarningLine2": "You can still send this transaction but it may fail.",
-  "global.unit.ada": "Ada",
   "global.uriExplanation": "These allow you to easily share invoices with friends and businesses by simply clicking a URL.",
   "global.uriSchemeTitleLabel": "Cardano Payment URLs",
   "global.wrongNetwork.address": "Wrong network for address.",
@@ -147,7 +146,7 @@
   "myWallets.wallets.sumInfoText": "Total wallet balance",
   "networkError.label.message": "WARNING: Connection to the server failed.<br>Please check your internet connection or <a target='blank' href='https://twitter.com/YoroiWallet'>our Twitter account</a>.<br>The displayed balance and transaction history may appear incorrect until our servers are back to normal, but your actual balance is not affected.",
   "nightly.banner.label.message": "YOU ARE ON YOROI NIGHTLY ({network}).",
-  "noticeBoard.noNoticeText.chooseAPool": "To view notifications here, first <strong>choose a stake pool</strong> and delegate your ADA.",
+  "noticeBoard.noNoticeText.chooseAPool": "To view notifications here, first <strong>choose a stake pool</strong> and delegate your {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "You have not delegated a stake yet.",
   "noticeBoard.notice.costChanged.subMessage": "Old cost was {oldCost} {currency} and new cost is {newCost} {currency}",
   "noticeBoard.notice.costChanged.title": "Stake pool cost has changed",
@@ -178,7 +177,7 @@
   "profile.languageSelect.title": "Language Select",
   "profile.nightly.acknowledgedRisks": "I Understand the risk",
   "profile.nightly.header": "<strong>Yoroi Nightly automatically updates nightly</strong> with the latest in-progress features. Although we will never intentionally push bugs or broken code, features may still be in-progress or contain errors.",
-  "profile.nightly.recommendation1": "You only use wallets with a small amount of ADA to minimize risk.",
+  "profile.nightly.recommendation1": "You only use wallets with a small balance to minimize risk.",
   "profile.nightly.recommendation2": "You report any issues to EMURGO through the Yoroi Nightly channel.",
   "profile.nightly.recommendationHeader": "We recommend that:",
   "profile.nightly.title": "Yoroi Nightly",
@@ -294,7 +293,6 @@
   "sidebar.settings": "Settings",
   "sidebar.transfer": "Claim / Transfer",
   "sidebar.wallets": "My wallets",
-  "testnet.label.message": "WARNING: This is a {network} network. ADA has no monetary value here. For more information, check out the FAQ at {faqLink}",
   "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK ({network}).",
   "transfer.form.instructions.step1.text": "It will take about 1 minute to restore your balance. In the next step, you will be presented with a transaction that will move all of your funds. Please review the details of the transaction carefully. You will need to pay a standard transaction fee on the Cardano network to make the transaction.",
   "transfer.form.masterkey.input.label": "Master key",
@@ -317,7 +315,7 @@
   "transfer.summary.recoveredBalance.label": "Recovered balance",
   "transfer.summary.transactionFee.label": "Transaction fees",
   "transfer.summary.transferButton.label": "Transfer Funds",
-  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
+  "upgradetx.explanation": "We found some {ticker} in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "URL successfully copied",
   "uri.display.dialog.title": "Generated URL",
   "uri.display.dialog.usabilityWarning": "This link can only be opened by users with Yoroi installed on their browser",
@@ -344,8 +342,6 @@
   "wallet.add.optionDialog.create.normalWallet.description": "A standard wallet backed by a recovery phrase.",
   "wallet.add.optionDialog.create.paperWallet.description": "Paper wallets can be created even on devices not connected to the internet which makes them well-suited for single-use cold storage.",
   "wallet.add.optionDialog.restore.dialogTitle": "Restore wallet",
-  "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
-  "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
   "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "If you have generated a Yoroi paper wallet (which is usually printed and kept offline), you can choose this option to import the funds from your Yoroi paper wallet.",
@@ -432,14 +428,13 @@
   "wallet.currency.pick.header": "Pick a currency or platform",
   "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
   "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
-  "wallet.dashboard.empty.title": "You have not delegated your ADA yet",
+  "wallet.dashboard.empty.title": "You have not delegated your {ticker} yet",
   "wallet.dashboard.epochEndTitle": "Time until Epoch end",
   "wallet.dashboard.epochProgress": "Epoch progress",
   "wallet.dashboard.epochTooltip": "Note: only the first reward after delegating will take {numEpochs} epochs. Afterwards, rewards come every epoch.",
   "wallet.dashboard.graph.dayToggleLabel": "Day (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "Epoch ({epochLength} days)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Epoch (1 day)",
-  "wallet.dashboard.graph.tooltip.epoch": "Total ADA Sent",
   "wallet.dashboard.graphType.costs": "Costs",
   "wallet.dashboard.graphType.positions": "Positions",
   "wallet.dashboard.lessthan.header": "There are many reasons why you could be getting less rewards than you expected. We list some common ones here",
@@ -468,12 +463,12 @@
   "wallet.dashboard.stakePool.stake": "Stake",
   "wallet.dashboard.stakePool.title": "Stake Pool Delegated",
   "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
-  "wallet.dashboard.summary.adaTitle": "Total ADA",
+  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "Total Delegated",
-  "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA can be corrected",
-  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} ADA cannot be corrected",
-  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} ADA with a different delegation preferences.",
-  "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the ADA",
+  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
+  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preferences.",
+  "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "make a transaction",
   "wallet.dashboard.summary.note": "Less than you expected?",
   "wallet.dashboard.summary.rewardsTitle": "Total Rewards",
@@ -499,7 +494,7 @@
   "wallet.delegation.transaction.success.explanation": "Track the status of the stake pool and the amount of time remaining to receive a reward from the Dashboard page",
   "wallet.delegation.transaction.success.title": "Successfully delegated",
   "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
-  "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
+  "wallet.deprecation.byronLine2": "To delegate your {ticker} you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "Necessary permissions were not granted by the user. Please retry.",
   "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
   "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
@@ -554,12 +549,12 @@
   "wallet.receive.page.internalWarning1": "Internal addresses (or \"change\" addresses) maintain your privacy by obscuring which addresses belong to you on the blockchain",
   "wallet.receive.page.internalWarning2": "addresses are shown here for personal auditing purposes and should <strong>never</strong> be used.",
   "wallet.receive.page.label": "Label",
-  "wallet.receive.page.mangledWarning1": "Mangled addresses contribute to your ADA balance but have the incorrect delegation preference",
+  "wallet.receive.page.mangledWarning1": "Mangled addresses contribute to your {ticker} balance but have the incorrect delegation preference",
   "wallet.receive.page.noResultsFoundLabel": "No results found",
   "wallet.receive.page.notFoundAnyAddresses": "We couldn't find any addresses matching your filter.",
   "wallet.receive.page.outputAmountUTXO": "Balance (UTXO sum)",
   "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
-  "wallet.receive.page.rewardAddressLine2": "You cannot send ADA to reward addresses, but we show it for personal auditing purposes",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send {ticker} to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "Correct delegation preference",
   "wallet.receive.page.verifyAddressLabel": "Verify address",
   "wallet.receive.page.walletAddressLabel": "Your wallet address",
@@ -604,13 +599,13 @@
   "wallet.send.confirmationDialog.totalLabel": "Total",
   "wallet.send.confirmationDialog.walletPasswordFieldPlaceholder": "Type your spending password",
   "wallet.send.confirmationDialog.walletPasswordLabel": "Spending password",
-  "wallet.send.form.amount.equalsAda": "equals {amount} ADA",
   "wallet.send.form.calculatingFee": "Calculating fee...",
   "wallet.send.form.cannotSendToLegacy": "You cannot send to legacy addresses (any address created before November 29th, 2019)",
+  "wallet.send.form.cannotSendToP2SH": "You cannot send to pay-to-script-hash addresses",
   "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
   "wallet.send.form.errors.invalidAddress": "Please enter a valid address.",
   "wallet.send.form.errors.invalidAmount": "Please enter a valid amount.",
-  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
+  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} {ticker}.",
   "wallet.send.form.receiver.hint": "Wallet Address",
   "wallet.send.form.receiver.label": "Receiver",
   "wallet.send.form.sendAll.checkboxLabel": "Send all {currency}",
@@ -711,12 +706,12 @@
   "wallet.transfer.deregister.line5": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
   "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
-  "wallet.transfer.instruction": "Any ADA claimed will be transferred to your currently selected wallet",
+  "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "You do NOT need to undelegate before switching stake pools",
   "wallet.undelegation.transaction.explanationLine2": "It will take 2 epochs after the end of the current epoch for undelegation to take effect",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
   "wallet.unsupported.title": "Wallet type not supported",
-  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} ADA from your deposit",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copy to clipboard",
   "widgets.explorer.tooltip": "Go to {websiteName}",
   "widgets.warningBox.headerText": "ATTENTION:",
