--- a/app/i18n/locales/de-DE.json
+++ b/app/i18n/locales/de-DE.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "Diese API-Funktion ist noch nicht implementiert.",
   "api.errors.GenericApiError": "Es ist ein Fehler aufgetreten, bitte versuche es später erneut.",
   "api.errors.IncorrectPasswordError": "Ungültiges Wallet-Passwort.",
-  "api.errors.NotEnoughMoneyToSendError": "Zu wenig Guthaben, um diese Transaktion durchzuführen.",
+  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
   "api.errors.PromiseNotCalledYetError": "Zugriff auf das Ergebnis vor Beendigung der Ausführung.",
   "api.errors.ReportRequestError": "Es gab ein Problem beim Senden der Support-Anfrage.",
   "api.errors.WalletAlreadyImportedError": "Die Wallet, die du versuchst zu importieren, existiert bereits.",
@@ -128,7 +128,6 @@
   "global.passwordInstructionsPaperWallet": "Achtung: Das Paper Wallet-Passwort muss mindestens <strong>10 Zeichen</strong> lang sein.",
   "global.staleTxnWarningLine1": "Seitdem diese Transaktion erstellt wurde hat sich Deine Wallet geändert.",
   "global.staleTxnWarningLine2": "Du kannst sie trotzdem versenden, sie könnte aber abgelehnt werden.",
-  "global.unit.ada": "Ada",
   "global.uriExplanation": "Diese ermöglichen es Dir sehr einfach Rechnungen mit Freunden und Geschäftspartnern durch einfaches Klicken auf eine URL zu teilen.",
   "global.uriSchemeTitleLabel": "Cardano Zahlungs-URLs",
   "global.wrongNetwork.address": "Falsches Netzwerk für diese Adresse.",
@@ -147,7 +146,7 @@
   "myWallets.wallets.sumInfoText": "Gesamtes Wallet Guthaben",
   "networkError.label.message": "WARNUNG: Verbindung zum Server fehlgeschlagen.<br>Bitte überprüfe Deine Internetverbindung oder <a target='blank' href='https://twitter.com/YoroiWallet'>unser Twitter Konto</a>.<br>Das angezeigte Guthaben und der Transaktions-Verlauf könnte unvollständig erscheinen, bis unsere Server wieder in Normalbetrieb sind. Dein effektives Guthaben ist davon aber nicht betroffen.",
   "nightly.banner.label.message": "DU BIST IM YOROI NIGHTLY ({network}).",
-  "noticeBoard.noNoticeText.chooseAPool": "Um hier Benachrichtigungen zu sehen, <strong>wähle zuerst einen Stake pool</strong> und delegiere Deine ADA.",
+  "noticeBoard.noNoticeText.chooseAPool": "To view notifications here, first <strong>choose a stake pool</strong> and delegate your {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "Du hast noch keinen Stake delegiert.",
   "noticeBoard.notice.costChanged.subMessage": "Die bisherigen Kosten waren {oldCost} {currency} und die neuen Kosten sind {newCost} {currency}",
   "noticeBoard.notice.costChanged.title": "Die Stake pool Kosten haben sich geändert",
@@ -178,7 +177,7 @@
   "profile.languageSelect.title": "Sprachauswahl",
   "profile.nightly.acknowledgedRisks": "Ich kenne das Risiko",
   "profile.nightly.header": "<strong>Yoroi Nightly aktualisiert sich automatisch jede Nacht</strong> mit den neuesten Funktionen die gerade in Ausarbeitung sind. Auch wenn wir nie bewusst Fehler oder ungültigen Code veröffentlichen, kann es gelegentlich passieren.",
-  "profile.nightly.recommendation1": "Du solltest nur Wallets mit sehr kleinen ADA-Mengen verwenden um das Risiko zu minimieren.",
+  "profile.nightly.recommendation1": "You only use wallets with a small balance to minimize risk.",
   "profile.nightly.recommendation2": "Du berichtest Probleme an EMURGO über den Yoroi Nightly Kanal.",
   "profile.nightly.recommendationHeader": "Wir empfehlen:",
   "profile.nightly.title": "Yoroi Nightly",
@@ -294,7 +293,6 @@
   "sidebar.settings": "Einstellungen",
   "sidebar.transfer": "Einfordern / Übertragen",
   "sidebar.wallets": "Meine Wallets",
-  "testnet.label.message": "WARNUNG: Dies ist ein {network}-Netzwerk. ADA hat hier keinen echten Geldwert. Weitere Informationen hierzu findest Du in den FAQ unter {faqLink}",
   "testnet.shelley.label.message": "DU BIST IM TESTNETZ NETZWERK ({network}).",
   "transfer.form.instructions.step1.text": "Es wird ungefähr eine Minute dauern, um deinen Kontostand wiederherzustellen. Im nächsten Schritt wird eine Transaktion angezeigt, die dein gesamtes Guthaben transferiert. Bitte überprüfe die Details der Transaktion sehr sorgfältig. Es ist notwendig, für diese Transaktion eine Standard-Transaktionsgebühr im Cardano-Netzwerk zu bezahlen.",
   "transfer.form.masterkey.input.label": "Generalschlüssel",
@@ -317,7 +315,7 @@
   "transfer.summary.recoveredBalance.label": "Wiederhergestellter Kontostand",
   "transfer.summary.transactionFee.label": "Transaktionsgebühren",
   "transfer.summary.transferButton.label": "Geld überweisen",
-  "upgradetx.explanation": "Wir haben ein paar ADA in Deiner Byron-Ära Wallet gefunden. Möchtest Du sie in deine Shelley Wallet übertragen?",
+  "upgradetx.explanation": "We found some {ticker} in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "URL erfolgreich kopiert",
   "uri.display.dialog.title": "Generierte URL",
   "uri.display.dialog.usabilityWarning": "Dieser Link kann nur von Benutzern geöffnet werden, die Yoroi in ihrem Browser installiert haben",
@@ -344,8 +342,6 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Ein Standard Wallet durch einen Wiederherstellungssatz geschützt.",
   "wallet.add.optionDialog.create.paperWallet.description": "Papier-Wallets können auch auf Geräten erstellt werden, die nicht mit dem Internet verbunden sind, wodurch sie sich gut für die exklusive Kalt-Lagerung (cold storage) eignen.",
   "wallet.add.optionDialog.restore.dialogTitle": "Wallet wiederherstellen",
-  "wallet.add.optionDialog.restore.normal24Wallet.description": "Wenn Du eine Wiederherstellungs-Satz bestehend aus 24 Wörtern hast, wähle diese Option um Dein Wallet herzustellen.",
-  "wallet.add.optionDialog.restore.normal24Wallet.title": "Geben Sie einen Wiederherstellungssatz mit 24 Wörtern ein",
   "wallet.add.optionDialog.restore.normalWallet.description": "Wenn du einen Wiederherstellungs-Wortsatz bestehend aus {length} Wörtern hast, wähle diese Option um Deine Wallet herzustellen.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Gib einen Wiederherstellungssatz bestehend aus {length} Wörtern ein",
   "wallet.add.optionDialog.restore.paperWallet.description": "Wähle diese Option wenn Du eine Yoroi paper wallet erstellt hast (diese wird normalerweise ausgedruckt und offline aufbewahrt) um Deine Geldbeträge vom Yoroi Paper Wallet zu importieren.",
@@ -432,14 +428,13 @@
   "wallet.currency.pick.header": "Wähle eine Währung oder Plattform",
   "wallet.currency.pick.testnetDescription": "Das Testnet ist eine alternative Chain mit der Tests durchgeführt werden. Dies erlaubt es Anwendungsentwicklern zu experimentieren und testen, ohne dass echte Geldwerte benutzt werden müssen.",
   "wallet.dashboard.empty.text": "Gehe auf die Delegationsseite um auszuwählen an welchen Stake Pool due delegieren möchtest.",
-  "wallet.dashboard.empty.title": "Du hast noch keine ADA delegiert",
+  "wallet.dashboard.empty.title": "You have not delegated your {ticker} yet",
   "wallet.dashboard.epochEndTitle": "Zeit bis zum Ende der Epoche",
   "wallet.dashboard.epochProgress": "Epochen Fortschritt",
   "wallet.dashboard.epochTooltip": "Hinweis: Nur die erste Belohnung nach dem Delegieren dauert {numEpochs} Epochen. Danach kommen in jeder Epoche Belohnungen.",
   "wallet.dashboard.graph.dayToggleLabel": "Tag (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "Epoche ({epochLength} Tage)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Epoche (1 Tag)",
-  "wallet.dashboard.graph.tooltip.epoch": "ADA insgesamt gesendet",
   "wallet.dashboard.graphType.costs": "Kosten",
   "wallet.dashboard.graphType.positions": "Positionen",
   "wallet.dashboard.lessthan.header": "Es gibt viele Gründe, warum Du weniger Belohnungen erhalten könntest als Du erwartet hast. Wir listen hier einige häufige Gründe auf",
@@ -468,12 +463,12 @@
   "wallet.dashboard.stakePool.stake": "Stake",
   "wallet.dashboard.stakePool.title": "Delegierter Stake Pool",
   "wallet.dashboard.stakePool.viewWebpage": "Zeige die Pool-Webseite",
-  "wallet.dashboard.summary.adaTitle": "ADA insgesamt",
+  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "Insgesamt delegiert",
-  "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA kann korrigiert werden",
-  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} ADA kann nicht korrigiert werden",
-  "wallet.dashboard.summary.mangled.line1": "Deine Wallet hat {adaAmount} ADA mit fremden Delegationseinstellungen.",
-  "wallet.dashboard.summary.mangled.line2": "Wir empfehlen zu {transactionMessage} um die ADA zu delegieren",
+  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
+  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preferences.",
+  "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "Führe eine Transaktion durch",
   "wallet.dashboard.summary.note": "Weniger als Du erwartet hast?",
   "wallet.dashboard.summary.rewardsTitle": "Summe der Erträge",
@@ -499,7 +494,7 @@
   "wallet.delegation.transaction.success.explanation": "In der Übersichtsseite kannst Du den Status des Stake pools verfolgen, und die verbleibende Zeit, um eine Belohnung zu erhalten",
   "wallet.delegation.transaction.success.title": "Erfolgreich delegiert",
   "wallet.deprecation.byronLine1": "Das Shelley Protokoll upgrade bringt einen neuen Shelley wallet Typ, welcher Delegierungen ermöglicht.",
-  "wallet.deprecation.byronLine2": "Um Deine ADA zu delegieren, musst Du auf eine Shelley Wallet upgraden.",
+  "wallet.deprecation.byronLine2": "To delegate your {ticker} you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "Notwendige Berechtigungen wurden vom Benutzer nicht erteilt. Bitte erneut versuchen.",
   "wallet.hw.incorrectDevice": "Ungültiges Gerät erkannt. Erwartetes Gerät {expectedDeviceId}, aber {responseDeviceId} gefunden. Bitte schließe das richtige Gerät an",
   "wallet.hw.incorrectVersion": "Ungültige Gerätversion erkannt. Wir unterstützen Version {supportedVersions}, Du hast aber Version {responseVersion}.",
@@ -554,12 +549,12 @@
   "wallet.receive.page.internalWarning1": "Interne Adressen (oder \"Wechsel\" Adressen) berücksichtigen Ihre Privatsphäre, indem auf der Blockchain verborgen bleibt welche Adressen zu Ihnen gehören",
   "wallet.receive.page.internalWarning2": "Adressen werden hier zum Zwecke der persönlichen Übersicht angezeigt und Du solltest sie <strong>niemals</strong> verwenden.",
   "wallet.receive.page.label": "Bezeichnung",
-  "wallet.receive.page.mangledWarning1": "Verstümmelte Adressen tragen zu Deiner ADA-Bilanz bei, haben aber eine andere Delegationseinstellung",
+  "wallet.receive.page.mangledWarning1": "Mangled addresses contribute to your {ticker} balance but have the incorrect delegation preference",
   "wallet.receive.page.noResultsFoundLabel": "Keine Ergebnisse gefunden",
   "wallet.receive.page.notFoundAnyAddresses": "Keine Adresse gefunden der diesem Filter entspricht.",
   "wallet.receive.page.outputAmountUTXO": "Saldo (UTXO Summe)",
   "wallet.receive.page.rewardAddressLine1": "Deine Ertragsadresse enthält deine Erträge und wird zum Überprüfen von Änderungen deiner Delegation verwendet",
-  "wallet.receive.page.rewardAddressLine2": "Du kannst keine ADA an Ertragsadressen schicken. Wir zeigen sie nur für persönliche Überprüfungen an",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send {ticker} to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "Korrigiere die Delegationseinstellung",
   "wallet.receive.page.verifyAddressLabel": "Überprüfe die Adresse",
   "wallet.receive.page.walletAddressLabel": "Deine Wallet-Adresse",
@@ -604,13 +599,13 @@
   "wallet.send.confirmationDialog.totalLabel": "Gesamt",
   "wallet.send.confirmationDialog.walletPasswordFieldPlaceholder": "Gib das Passwort für Ausgaben ein",
   "wallet.send.confirmationDialog.walletPasswordLabel": "Passwort für Ausgaben",
-  "wallet.send.form.amount.equalsAda": "entspricht {amount} ADA",
   "wallet.send.form.calculatingFee": "Berechne Gebühr...",
   "wallet.send.form.cannotSendToLegacy": "Sie können nicht an alte Adressen senden (Adressen, die vor dem 29. November 2019 erstellt wurden)",
+  "wallet.send.form.cannotSendToP2SH": "You cannot send to pay-to-script-hash addresses",
   "wallet.send.form.cannotSendToReward": "Du kannst nicht an ein Ertrags-Konto senden",
   "wallet.send.form.errors.invalidAddress": "Bitte eine gültige Adresse eingeben.",
   "wallet.send.form.errors.invalidAmount": "Bitte einen gültigen Betrag eingeben.",
-  "wallet.send.form.errors.tooSmallUtxo": "Es ist nicht möglich weniger als {minUtxo} ADA zu senden.",
+  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} {ticker}.",
   "wallet.send.form.receiver.hint": "Wallet-Adresse",
   "wallet.send.form.receiver.label": "Empfänger",
   "wallet.send.form.sendAll.checkboxLabel": "Sende alle {currency}",
@@ -711,12 +706,12 @@
   "wallet.transfer.deregister.line5": "Deregistrieren bedeutet, dass dieser Schlüssel keine Rewards mehr bekommen wird, bis er nicht wieder registriert wird (üblicherweise wenn wieder an einen Pool delegiert wird)",
   "wallet.transfer.deregister.noNeedToDeregister": "Du musst NICHT deregistrieren oder an einen anderen Stakepool delegieren. Du kannst deine bevorzugte Delegierung jederzeit ändern",
   "wallet.transfer.deregister.title": "Soll der Staking Key de-registriert werden?",
-  "wallet.transfer.instruction": "Alle beantragten ADA werden in die gerade ausgewählte Wallet übertragen",
+  "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "Du musst NICHT undelegieren bevor Du zu einem anderen Stake pool wechselst",
   "wallet.undelegation.transaction.explanationLine2": "Es wird nach dem Ende der aktuellen Epoche 2 weitere Epochen dauern bis die Undelegierung effektiv wird",
   "wallet.unsupported.subtitle": "Diese Funktion wird von der ausgewählten Wallet nicht unterstützt",
   "wallet.unsupported.title": "Nicht unterstützer Wallet typ",
-  "wallet.withdrawal.transaction.unregister": "Diese Transaktion wird eine oder mehrere Staking Schlüssel zurückziehen, und Dir {refundAmount} ADA zurückgeben",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "In die Zwischenablage kopieren",
   "widgets.explorer.tooltip": "Gehe zu {websiteName}",
   "widgets.warningBox.headerText": "ACHTUNG:",
