--- a/app/i18n/locales/el-GR.json
+++ b/app/i18n/locales/el-GR.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "Αυτή η μέθοδος ΔΠΕ (Διεπαφή προγραμματισμού εφαρμογών) δεν έχει εφαρμοστεί ακόμη.",
   "api.errors.GenericApiError": "Ένα σφάλμα προέκυψε, παρακαλώ προσπαθήστε ξανά αργότερα.",
   "api.errors.IncorrectPasswordError": "Λανθασμένος κωδικός πορτοφολιού.",
-  "api.errors.NotEnoughMoneyToSendError": "Δεν υπάρχουν αρκετά ADA για να κάνετε αυτή τη συναλλαγή.",
+  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
   "api.errors.PromiseNotCalledYetError": "Πρόσβαση στο αποτέλεσμα πριν ολοκληρωθεί η διαδικασία.",
   "api.errors.ReportRequestError": "Υπήρξε πρόβλημα στην αποστολή αιτήματος για υποστήριξη.",
   "api.errors.WalletAlreadyImportedError": "Το πορτοφόλι που προσπαθείτε να εισάγετε υπάρχει ήδη.",
@@ -128,7 +128,6 @@
   "global.passwordInstructionsPaperWallet": "Note: Paper Wallet password needs to be at least <strong>10 characters</strong> long.",
   "global.staleTxnWarningLine1": "Το πορτοφόλι σας έχει αλλάξει από τότε που δημιουργήσατε αυτή τη συναλλαγή.",
   "global.staleTxnWarningLine2": "Μπορείτε ακόμη να στείλετε αυτή τη συναλλαγή, αλλά ίσως αποτύχει.",
-  "global.unit.ada": "Ada",
   "global.uriExplanation": "Αυτά σας επιτρέπουν να μοιραστείτε τιμολόγια με φίλους και επιχειρήσεις εύκολα, απλά κάνοντας κλικ σε μία διεύθυνση (URL).",
   "global.uriSchemeTitleLabel": "Ενιαίοι Εντοπιστές Πόρων (URLs) πληρωμής Cardano",
   "global.wrongNetwork.address": "Wrong network for address.",
@@ -147,7 +146,7 @@
   "myWallets.wallets.sumInfoText": "Total wallet balance",
   "networkError.label.message": "ΠΡΟΕΙΔΟΠΟΙΗΣΗ: Η σύνδεση στο διακομιστή απέτυχε.<br>Παρακαλώ ελέγξτε τη σύνδεση σας στο διαδίκτυο ή <a target='blank' href='https://twitter.com/YoroiWallet'>ο Twitter λογαριασμός μας</a>.<br>Το προβαλλόμενο υπόλοιπο και ιστορικό συναλλαγών μπορεί να εμφανίζονται εσφαλμένα μέχρι οι διακομιστές μας να ξαναλειτουργήσουν κανονικά, αλλά το πραγματικό σας υπόλοιπο δεν επηρεάζεται.",
   "nightly.banner.label.message": "YOU ARE ON YOROI NIGHTLY ({network}).",
-  "noticeBoard.noNoticeText.chooseAPool": "To view notifications here, first <strong>choose a stake pool</strong> and delegate your ADA.",
+  "noticeBoard.noNoticeText.chooseAPool": "To view notifications here, first <strong>choose a stake pool</strong> and delegate your {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "You have not delegated a stake yet.",
   "noticeBoard.notice.costChanged.subMessage": "Old cost was {oldCost} {currency} and new cost is {newCost} {currency}",
   "noticeBoard.notice.costChanged.title": "Stake pool cost has changed",
@@ -178,7 +177,7 @@
   "profile.languageSelect.title": "Επιλογή Γλώσσας",
   "profile.nightly.acknowledgedRisks": "I Understand the risk",
   "profile.nightly.header": "<strong>Yoroi Nightly automatically updates nightly</strong> with the latest in-progress features. Although we will never intentionally push bugs or broken code, features may still be in-progress or contain errors.",
-  "profile.nightly.recommendation1": "You only use wallets with a small amount of ADA to minimize risk.",
+  "profile.nightly.recommendation1": "You only use wallets with a small balance to minimize risk.",
   "profile.nightly.recommendation2": "You report any issues to EMURGO through the Yoroi Nightly channel.",
   "profile.nightly.recommendationHeader": "We recommend that:",
   "profile.nightly.title": "Yoroi Nightly",
@@ -294,7 +293,6 @@
   "sidebar.settings": "Settings",
   "sidebar.transfer": "Claim / Transfer",
   "sidebar.wallets": "My wallets",
-  "testnet.label.message": "ΠΡΟΕΙΔΟΠΟΙΗΣΗ: Αυτό είναι ένα {network} δίκτυο. Το ADA δεν έχει καμία νομισματική αξία εδώ. Για περισσότερες πληροφορίες, διαβάστε στις συχνές ερωτήσεις {faqLink}",
   "testnet.shelley.label.message": "YOU ARE ON TESTNET NETWORK ({network}).",
   "transfer.form.instructions.step1.text": "Θα χρειαστεί περίπου 1 λεπτό για επαναφορά του υπολοίπου σας. Στο επόμενο βήμα, θα σας παρουσιαστεί μία συναλλαγή που θα μεταφέρει όλα τα χρήματα σας. Παρακαλώ εξετάστε τις λεπτομέρειες συναλλαγής προσεκτικά. Θα χρειαστεί να πληρώσετε μία προδιαγεγραμμένη προμήθεια συναλλαγής στο δίκτυο του Cardano για να κάνετε τη συναλλαγή.",
   "transfer.form.masterkey.input.label": "Αντικλείδι (Master key) ",
@@ -317,7 +315,7 @@
   "transfer.summary.recoveredBalance.label": "Ανακτηθέν υπόλοιπο",
   "transfer.summary.transactionFee.label": "Προμήθειες συναλλαγής",
   "transfer.summary.transferButton.label": "Μεταφορά Χρημάτων",
-  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
+  "upgradetx.explanation": "We found some {ticker} in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "Ενιαίος Εντοπιστής Πόρων (URL) αντιγράφηκε πετυχημένα",
   "uri.display.dialog.title": "Ενιαίος Εντοπιστής Πόρων (URL) δημιουργήθηκε",
   "uri.display.dialog.usabilityWarning": "Αυτός ο σύνδεσμος μπορεί μόνο να ανοιχθεί από χρήστες που έχουν το Yoroi εγκατεστημένο στον περιηγητή τους",
@@ -344,8 +342,6 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Ενα προδιαγεγραμμένο πορτοφόλι που υποστηρίζεται από μία φράση ανάκτησης.",
   "wallet.add.optionDialog.create.paperWallet.description": "Τα έντυπα πορτοφόλια μπορούν να δημιουργηθούν ακόμη και σε συσκευές που δεν είναι συνδεδεμένες στο διαδίκτυο κάτι που τις κάνει πολύ κατάλληλες για \"κρυα\" αποθήκευση μίας χρήσης.",
   "wallet.add.optionDialog.restore.dialogTitle": "Επαναφορά πορτοφολιού",
-  "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
-  "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
   "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "Εάν έχετε δημιουργήσει ένα έντυπο πορτοφόλι Yoroi (το οποίο συνήθως εκτυπώνεται και κρατείται εκτός σύνδεσης), μπορείτε να επιλέξετε αυτή την επιλογή για να εισάγετε χρήματα από το έντυπο Yoroi πορτοφόλι σας.",
@@ -432,14 +428,13 @@
   "wallet.currency.pick.header": "Επιλέξτε ένα νόμισμα ή πλατφόρμα",
   "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
   "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
-  "wallet.dashboard.empty.title": "You have not delegated your ADA yet",
+  "wallet.dashboard.empty.title": "You have not delegated your {ticker} yet",
   "wallet.dashboard.epochEndTitle": "Time until Epoch end",
   "wallet.dashboard.epochProgress": "Epoch progress",
   "wallet.dashboard.epochTooltip": "Note: only the first reward after delegating will take {numEpochs} epochs. Afterwards, rewards come every epoch.",
   "wallet.dashboard.graph.dayToggleLabel": "Day (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "Epoch ({epochLength} days)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Epoch (1 day)",
-  "wallet.dashboard.graph.tooltip.epoch": "Total ADA Sent",
   "wallet.dashboard.graphType.costs": "Costs",
   "wallet.dashboard.graphType.positions": "Positions",
   "wallet.dashboard.lessthan.header": "There are many reasons why you could be getting less rewards than you expected. We list some common ones here",
@@ -468,12 +463,12 @@
   "wallet.dashboard.stakePool.stake": "Stake",
   "wallet.dashboard.stakePool.title": "Stake Pool Delegated",
   "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
-  "wallet.dashboard.summary.adaTitle": "Total ADA",
+  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "Total Delegated",
-  "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA can be corrected",
-  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} ADA cannot be corrected",
-  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} ADA with a different delegation preferences.",
-  "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the ADA",
+  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
+  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preferences.",
+  "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "make a transaction",
   "wallet.dashboard.summary.note": "Less than you expected?",
   "wallet.dashboard.summary.rewardsTitle": "Total Rewards",
@@ -499,7 +494,7 @@
   "wallet.delegation.transaction.success.explanation": "Track the status of the stake pool and the amount of time remaining to receive a reward from the Dashboard page",
   "wallet.delegation.transaction.success.title": "Successfully delegated",
   "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
-  "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
+  "wallet.deprecation.byronLine2": "To delegate your {ticker} you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "Απαραίτητες άδειες δεν παραχωρήθηκαν από το χρήστη. Παρακαλώ προσπαθήστε ξανά.",
   "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
   "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
@@ -554,12 +549,12 @@
   "wallet.receive.page.internalWarning1": "Internal addresses (or \"change\" addresses) maintain your privacy by obscuring which addresses belong to you on the blockchain",
   "wallet.receive.page.internalWarning2": "addresses are shown here for personal auditing purposes and should <strong>never</strong> be used.",
   "wallet.receive.page.label": "Label",
-  "wallet.receive.page.mangledWarning1": "Mangled addresses contribute to your ADA balance but have the incorrect delegation preference",
+  "wallet.receive.page.mangledWarning1": "Mangled addresses contribute to your {ticker} balance but have the incorrect delegation preference",
   "wallet.receive.page.noResultsFoundLabel": "Δεν βρέθηκαν αποτελέσματα",
   "wallet.receive.page.notFoundAnyAddresses": "Δεν μπορέσαμε να βρούμε διευθύνσεις που να ταιριάζουν στα φίλτρα σας.",
   "wallet.receive.page.outputAmountUTXO": "Υπόλοιπο (UTXO sum)",
   "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
-  "wallet.receive.page.rewardAddressLine2": "You cannot send ADA to reward addresses, but we show it for personal auditing purposes",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send {ticker} to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "Correct delegation preference",
   "wallet.receive.page.verifyAddressLabel": "Επιβεβαίωση διεύθυνσης",
   "wallet.receive.page.walletAddressLabel": "Η διεύθυνση πορτοφολιού σας",
@@ -604,13 +599,13 @@
   "wallet.send.confirmationDialog.totalLabel": "Σύνολο",
   "wallet.send.confirmationDialog.walletPasswordFieldPlaceholder": "Πληκτρολογήστε τον κωδικό δαπάνης σας",
   "wallet.send.confirmationDialog.walletPasswordLabel": "Κωδικός δαπάνης",
-  "wallet.send.form.amount.equalsAda": "ισούται {amount} ADA",
   "wallet.send.form.calculatingFee": "Υπολογισμός προμήθειας...",
   "wallet.send.form.cannotSendToLegacy": "You cannot send to legacy addresses (any address created before November 29th, 2019)",
+  "wallet.send.form.cannotSendToP2SH": "You cannot send to pay-to-script-hash addresses",
   "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
   "wallet.send.form.errors.invalidAddress": "Παρακαλώ εισάγετε μία έγκυρη διεύθυνση.",
   "wallet.send.form.errors.invalidAmount": "Παρακαλώ εισάγετε ένα έγκυρο ποσό.",
-  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
+  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} {ticker}.",
   "wallet.send.form.receiver.hint": "Διεύθυνση Πορτοφολιού",
   "wallet.send.form.receiver.label": "Αποδέκτης",
   "wallet.send.form.sendAll.checkboxLabel": "Αποστολή όλων {currency}",
@@ -711,12 +706,12 @@
   "wallet.transfer.deregister.line5": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
   "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
-  "wallet.transfer.instruction": "Όσα ADA δηλώθηκαν θα μεταφερθούν στο τρέχων επιλεγμένο πορτοφόλι σας",
+  "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "You do NOT need to undelegate before switching stake pools",
   "wallet.undelegation.transaction.explanationLine2": "It will take 2 epochs after the end of the current epoch for undelegation to take effect",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
   "wallet.unsupported.title": "Wallet type not supported",
-  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} ADA from your deposit",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Αντιγραφή στο πρόχειρο",
   "widgets.explorer.tooltip": "Πηγαίνετε στο {websiteName}",
   "widgets.warningBox.headerText": "ΠΡΟΣΟΧΗ:",
