--- a/app/i18n/locales/es-ES.json
+++ b/app/i18n/locales/es-ES.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "Este método de la API no ha sido implementado todavía.",
   "api.errors.GenericApiError": "Se ha producido un error, inténtalo de nuevo más tarde.",
   "api.errors.IncorrectPasswordError": "Contraseña de billetera incorrecta.",
-  "api.errors.NotEnoughMoneyToSendError": "No hay suficiente ADA para hacer esta transacción.",
+  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
   "api.errors.PromiseNotCalledYetError": "Se accedió al resultado antes de que la ejecución terminara.",
   "api.errors.ReportRequestError": "Hubo un problema enviando la solicitud de soporte.",
   "api.errors.WalletAlreadyImportedError": "La billetera que estás intentando importar ya existe.",
@@ -128,7 +128,6 @@
   "global.passwordInstructionsPaperWallet": "Nota: La contraseña de la Billetera de Papel debe ser de al menos <strong>10 caracteres</strong> de longitud.",
   "global.staleTxnWarningLine1": "Tu billetera ha cambiado desde que creaste esta transacción.",
   "global.staleTxnWarningLine2": "Aún puedes enviar esta transacción, pero puede fallar.",
-  "global.unit.ada": "ADA",
   "global.uriExplanation": "Permiten compartir fácilmente facturas con amigos y empresas, con sólo hacer clic en una URL.",
   "global.uriSchemeTitleLabel": "URLs de Pago de Cardano",
   "global.wrongNetwork.address": "Red errónea para esa dirección.",
@@ -147,7 +146,7 @@
   "myWallets.wallets.sumInfoText": "Saldo total",
   "networkError.label.message": "ADVERTENCIA: La conexión con el servidor falló.<br>Por favor, comprueba tu conexión a Internet, o visita <a target='blank' href='https://twitter.com/YoroiWallet'>nuestra cuenta en Twitter</a>.<br>El saldo y el historial de transacciones pueden mostrarse incorrectos hasta que nuestros servidores regresen a la normalidad. Tu saldo real no se verá afectado.",
   "nightly.banner.label.message": "ESTÁS USANDO YOROI NIGHTLY ({network}).",
-  "noticeBoard.noNoticeText.chooseAPool": "Para ver las notificaciones aquí, primero <strong> elige un stake pool </strong> y delega tus ADA.",
+  "noticeBoard.noNoticeText.chooseAPool": "Para ver las notificaciones aquí, primero <strong> elija un stake pool </strong> y delegue su {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "Aún no has delegado una participación.",
   "noticeBoard.notice.costChanged.subMessage": "El antiguo coste era {oldCost} {currency} y el nuevo coste es {newCost} {currency}",
   "noticeBoard.notice.costChanged.title": "El coste del stake pool ha cambiado",
@@ -178,7 +177,7 @@
   "profile.languageSelect.title": "Selección de idioma",
   "profile.nightly.acknowledgedRisks": "Comprendo el riesgo",
   "profile.nightly.header": "<strong>Yoroi Nightly se actualiza automáticamente cada noche</strong> con las últimas características en desarrollo. Aunque nunca lanzaremos intencionalmente versiones con bugs o con código roto, las características pueden estar todavía en progreso y contener errores.",
-  "profile.nightly.recommendation1": "Sólo usa billeteras con una pequeña cantidad de ADA para minimizar el riesgo.",
+  "profile.nightly.recommendation1": "Sólo se usan billeteras con saldo pequeño para minimizar el riesgo.",
   "profile.nightly.recommendation2": "Reporta cualquier problema a EMURGO a través del canal Yoroi Nightly.",
   "profile.nightly.recommendationHeader": "Recomendamos:",
   "profile.nightly.title": "Yoroi Nightly",
@@ -294,7 +293,6 @@
   "sidebar.settings": "Configuración",
   "sidebar.transfer": "Reclamar / Transferir",
   "sidebar.wallets": "Mis billeteras",
-  "testnet.label.message": "ADVERTENCIA: Se trata de una red {network}. ADA no tiene valor monetario aquí. Para obtener más información, consulta las preguntas frecuentes (FAQ) en {faqLink}",
   "testnet.shelley.label.message": "ESTÁS EN LA RED DE PRUEBA ({network}).",
   "transfer.form.instructions.step1.text": "Tardará aproximadamente 1 minuto en restablecer tu saldo. En el siguiente paso, se presentará una transacción que moverá todos tus fondos. Por favor, revisa los detalles de la transacción cuidadosamente. Para realizar dicha transacción, deberás pagar una comisión por transacción estándar en la red de Cardano.",
   "transfer.form.masterkey.input.label": "Clave Maestra",
@@ -317,7 +315,7 @@
   "transfer.summary.recoveredBalance.label": "Saldo recuperado",
   "transfer.summary.transactionFee.label": "Comisiones por transacción",
   "transfer.summary.transferButton.label": "Transferir fondos",
-  "upgradetx.explanation": "Encontramos un saldo en tu billetera de la era Byron. ¿Te gustaría transferirlo a tu nueva billetera de Shelley?",
+  "upgradetx.explanation": "Encontramos algunas {ticker} en tu billetera de la era Byron. ¿Te gustaría transferirlas a tu nueva billetera Shelley?",
   "uri.display.dialog.copy.notification": "La URL ha sido copiada exitosamente",
   "uri.display.dialog.title": "URL generada",
   "uri.display.dialog.usabilityWarning": "Este enlace sólo puede ser abierto por usuarios que tengan Yoroi instalado en su navegador",
@@ -344,8 +342,6 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Una billetera estándar respaldada por una frase de recuperación.",
   "wallet.add.optionDialog.create.paperWallet.description": "Las billeteras de papel pueden crearse incluso en dispositivos no conectados a Internet, lo que las hace muy adecuadas para el almacenamiento en frío de un solo uso.",
   "wallet.add.optionDialog.restore.dialogTitle": "Restaurar billetera",
-  "wallet.add.optionDialog.restore.normal24Wallet.description": "Si tienes una frase de recuperación de 24 palabras, elige esta opción para restaurar tu billetera.",
-  "wallet.add.optionDialog.restore.normal24Wallet.title": "Ingresa una frase de recuperación de 24 palabras",
   "wallet.add.optionDialog.restore.normalWallet.description": "Si posees una frase de recuperación de {length} palabras, elige esta opción para restaurar tu billetera.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Ingresa una frase de recuperación de {length} palabras",
   "wallet.add.optionDialog.restore.paperWallet.description": "Si has generado una billetera de papel de Yoroi (la cual generalmente se imprime y resguarda off-line), puedes elegir esta opción para importar tus fondos.",
@@ -432,14 +428,13 @@
   "wallet.currency.pick.header": "Selecciona una moneda o plataforma",
   "wallet.currency.pick.testnetDescription": "Las testnets son cadenas alternativas que se utilizan exclusivamente para pruebas. Esto permite a los desarrolladores de aplicaciones o testers experimentar sin tener que usar monedas reales.",
   "wallet.dashboard.empty.text": "Dirígete a la sección de delegación para elegir el stake pool al que quieres delegar.",
-  "wallet.dashboard.empty.title": "No has delegado tus ADA aún",
+  "wallet.dashboard.empty.title": "Aún no ha delegado su {ticker}",
   "wallet.dashboard.epochEndTitle": "Finaliza en",
   "wallet.dashboard.epochProgress": "Progreso del epoch",
   "wallet.dashboard.epochTooltip": "Nota: Sólo la primera recompensa luego de delegar requerirá {numEpochs} epochs. Posterior a ello, las recompensas llegarán en cada epoch.",
   "wallet.dashboard.graph.dayToggleLabel": "Día (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "Epoch ({epochLength} días)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Epoch (1 día)",
-  "wallet.dashboard.graph.tooltip.epoch": "Total de ADA enviado",
   "wallet.dashboard.graphType.costs": "Costes",
   "wallet.dashboard.graphType.positions": "Posiciones",
   "wallet.dashboard.lessthan.header": "Hay muchas razones por las que podrías estar recibiendo menos recompensas de las que esperabas. Aquí enumeramos algunas causas comunes",
@@ -468,12 +463,12 @@
   "wallet.dashboard.stakePool.stake": "Participación",
   "wallet.dashboard.stakePool.title": "Stake pool delegado",
   "wallet.dashboard.stakePool.viewWebpage": "Ver la página web del pool",
-  "wallet.dashboard.summary.adaTitle": "Total ADA",
+  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "Total delegado",
-  "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA pueden corregirse",
-  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} ADA no pueden corregirse",
-  "wallet.dashboard.summary.mangled.line1": "Tu billetera posee {adaAmount} ADA con diferentes preferencias de delegación.",
-  "wallet.dashboard.summary.mangled.line2": "Aconsejamos {transactionMessage} para delegar las ADA",
+  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} puede ser corregido",
+  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} no puede ser corregido",
+  "wallet.dashboard.summary.mangled.line1": "Su billetera tiene {adaAmount} {ticker} con diferente preferencia de delegación.",
+  "wallet.dashboard.summary.mangled.line2": "Recomendamos que {transactionMessage} para delegar la {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "realizar una transacción",
   "wallet.dashboard.summary.note": "¿Menos de lo que esperabas?",
   "wallet.dashboard.summary.rewardsTitle": "Total recompensas",
@@ -499,7 +494,7 @@
   "wallet.delegation.transaction.success.explanation": "Realiza un control del estado del stake pool, y del tiempo que resta para recibir una recompensa, desde la página de Seguimiento",
   "wallet.delegation.transaction.success.title": "Delegación exitosa",
   "wallet.deprecation.byronLine1": "La actualización del protocolo de Shelley añade un nuevo tipo de billetera de Shelley que permite la delegación.",
-  "wallet.deprecation.byronLine2": "Para delegar tus ADA deberás actualizar tu billetera a una de Shelley.",
+  "wallet.deprecation.byronLine2": "Para delegar su {ticker} tendrá que actualizar a una billetera Shelley.",
   "wallet.hw.common.error.101": "Los permisos necesarios no fueron concedidos por el usuario. Por favor, inténtalo de nuevo.",
   "wallet.hw.incorrectDevice": "Se ha detectado un dispositivo incorrecto. El dispositivo esperado era {expectedDeviceId}, pero se obtuvo el dispositivo {responseDeviceId}. Por favor, conecta el dispositivo correcto",
   "wallet.hw.incorrectVersion": "Se ha detectado una versión incorrecta del dispositivo. Tienes la versión {responseVersion}, pero Yoroi soporta la versión {supportedVersions}.",
@@ -554,12 +549,12 @@
   "wallet.receive.page.internalWarning1": "Las direcciones internas (o direcciones \"cambiantes\") mantienen tu privacidad ocultando en la blockchain las direcciones que te pertenecen.",
   "wallet.receive.page.internalWarning2": "se muestran aquí para propósitos de auditoría personal y <strong>nunca</strong> deberían ser usadas.",
   "wallet.receive.page.label": "Etiqueta",
-  "wallet.receive.page.mangledWarning1": "Las direcciones manipuladas incrementan tu saldo de ADA, pero tienen una preferencia de delegación incorrecta",
+  "wallet.receive.page.mangledWarning1": "Las direcciones destrozadas contribuyen a su balance {ticker}, pero tienen la preferencia de delegación incorrecta",
   "wallet.receive.page.noResultsFoundLabel": "No se encontraron resultados",
   "wallet.receive.page.notFoundAnyAddresses": "No pudimos encontrar ninguna dirección que coincida con tu búsqueda.",
   "wallet.receive.page.outputAmountUTXO": "Saldo (sumarización del UTxO)",
   "wallet.receive.page.rewardAddressLine1": "La dirección de recompensa contiene tus recompensas, y se utiliza para validar cualquier cambio en tu preferencia de delegación",
-  "wallet.receive.page.rewardAddressLine2": "No puedes enviar ADA a direcciones de recompensa, pero la mostramos para propósitos de auditoría personal",
+  "wallet.receive.page.rewardAddressLine2": "No puedes enviar {ticker} a direcciones de recompensar, pero la mostramos para propósitos de auditoría personal",
   "wallet.receive.page.unmangeLabel": "Corregir la preferencia de delegación",
   "wallet.receive.page.verifyAddressLabel": "Verifica la dirección",
   "wallet.receive.page.walletAddressLabel": "Dirección de tu billetera",
@@ -604,13 +599,13 @@
   "wallet.send.confirmationDialog.totalLabel": "Total",
   "wallet.send.confirmationDialog.walletPasswordFieldPlaceholder": "Ingresa tu contraseña de gastos",
   "wallet.send.confirmationDialog.walletPasswordLabel": "Contraseña de gastos",
-  "wallet.send.form.amount.equalsAda": "equivale a {amount} ADA",
   "wallet.send.form.calculatingFee": "Calculando comisión...",
   "wallet.send.form.cannotSendToLegacy": "No puedes enviar a direcciones antiguas (cualquier dirección creada antes del 29 de noviembre de 2019)",
+  "wallet.send.form.cannotSendToP2SH": "No se puede enviar a direcciones de pago a script-hash",
   "wallet.send.form.cannotSendToReward": "No puedes enviar a una cuenta de recompensas",
   "wallet.send.form.errors.invalidAddress": "Por favor, ingresa una dirección válida.",
   "wallet.send.form.errors.invalidAmount": "Por favor, ingresa un monto válido.",
-  "wallet.send.form.errors.tooSmallUtxo": "No puedes enviar menos de {minUtxo} ADA.",
+  "wallet.send.form.errors.tooSmallUtxo": "No puede enviar menos de {minUtxo} {ticker}.",
   "wallet.send.form.receiver.hint": "Dirección de la Billetera",
   "wallet.send.form.receiver.label": "Dirección de destino",
   "wallet.send.form.sendAll.checkboxLabel": "Enviar todo",
@@ -711,12 +706,12 @@
   "wallet.transfer.deregister.line5": "La cancelación del registro significa que esta clave ya no recibirá recompensas hasta que vuelvas a registrar la llave de delegación (normalmente delegando nuevamente en un stake pool)",
   "wallet.transfer.deregister.noNeedToDeregister": "NO es necesario que te desregistres para delegar en otro stake pool. Puedes cambiar tu preferencia de delegación en cualquier momento",
   "wallet.transfer.deregister.title": "¿También desregistrar la clave de delegación?",
-  "wallet.transfer.instruction": "Toda ADA reclamada será transferida a la billetera actualmente seleccionada",
+  "wallet.transfer.instruction": "Cualquier {ticker} reclamada será transferida a su billetera actualmente seleccionada",
   "wallet.undelegation.transaction.explanationLine1": "NO es necesario que canceles la delegación antes de cambiar de stake pool",
   "wallet.undelegation.transaction.explanationLine2": "Tomará 2 epochs, a partir del final del epoch actual, para que la des-delegación se haga efectiva",
   "wallet.unsupported.subtitle": "La billetera seleccionada no soporta esta funcionalidad",
   "wallet.unsupported.title": "Tipo de billetera no soportada",
-  "wallet.withdrawal.transaction.unregister": "Esta transacción anulará una o más claves de delegación, devolviéndote tus {refundAmount} ADA de tu depósito",
+  "wallet.withdrawal.transaction.unregister": "Esta transacción desregistrará una o más llaves de staking, devolviéndole su {refundAmount} {ticker} de su depósito",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copiar al portapapeles",
   "widgets.explorer.tooltip": "Ir a {websiteName}",
   "widgets.warningBox.headerText": "ATENCIÓN:",
