--- a/app/i18n/locales/it-IT.json
+++ b/app/i18n/locales/it-IT.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "Questo metodo API non è ancora stato implementato.",
   "api.errors.GenericApiError": "Si è verificato un errore, riprova più tardi.",
   "api.errors.IncorrectPasswordError": "Password del portafoglio errata.",
-  "api.errors.NotEnoughMoneyToSendError": "Non hai abbastanza ADA per effettuare questa transazione.",
+  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
   "api.errors.PromiseNotCalledYetError": "Risultato raggiunto prima che l'esecuzione sia terminata.",
   "api.errors.ReportRequestError": "Si è verificato un problema durante l'invio della richiesta di supporto.",
   "api.errors.WalletAlreadyImportedError": "Il portafoglio che stai cercando di importare è già esistente.",
@@ -128,7 +128,6 @@
   "global.passwordInstructionsPaperWallet": "Nota: la password del portafoglio cartaceo deve essere lunga almeno <strong>10 caratteri</strong>.",
   "global.staleTxnWarningLine1": "Da quando hai creato questa transazione il tuo portafoglio è cambiato.",
   "global.staleTxnWarningLine2": "È ancora possibile inviare questa transazione ma potrebbe fallire.",
-  "global.unit.ada": "Ada",
   "global.uriExplanation": "Queste opzioni ti consentono di condividere facilmente le fatture con amici e con aziende semplicemente facendo clic su un URL.",
   "global.uriSchemeTitleLabel": "URL di Pagamento Cardano",
   "global.wrongNetwork.address": "Wrong network for address.",
@@ -147,7 +146,7 @@
   "myWallets.wallets.sumInfoText": "Saldo totale del portafoglio",
   "networkError.label.message": "Connessione al server fallita. <br>Per favore controlla la tua connessione oppure<a target='blank' href='https://twitter.com/YoroiWallet'> il nostro account Twitter</a>.<br>. Il bilancio mostrato e lo storico delle transazioni potrebbe essere incorretto fino a quando la connessione ai server venga normalizzata, ma il tuo bilancio effettivo non verrà modificato.",
   "nightly.banner.label.message": "SEI SU YOROI NIGHTLY ({network}).",
-  "noticeBoard.noNoticeText.chooseAPool": "Per visualizzare le notifiche qui, prima <strong> scegli una staking pool</strong>e delega i tuoi ADA.",
+  "noticeBoard.noNoticeText.chooseAPool": "To view notifications here, first <strong>choose a stake pool</strong> and delegate your {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "Non hai ancora delegato uno stake.",
   "noticeBoard.notice.costChanged.subMessage": "Il vecchio costo era {oldCost} {currency} e il nuovo costo è {newCost} {currency}",
   "noticeBoard.notice.costChanged.title": "Il costo della stake pool è cambiato",
@@ -178,7 +177,7 @@
   "profile.languageSelect.title": "Seleziona lingua",
   "profile.nightly.acknowledgedRisks": "Sono consapevole del rischio",
   "profile.nightly.header": "<strong>Yoroi Nightly si aggiorna automaticamente ogni notte</strong> con le ultime funzionalità in corso. Sebbene non invieremo mai intenzionalmente bug o codice non funzionante, le funzionalità potrebbero essere ancora in progresso o contenere errori.",
-  "profile.nightly.recommendation1": "Utilizza solo portafogli con una piccola quantità di ADA per ridurre al minimo il rischio.",
+  "profile.nightly.recommendation1": "You only use wallets with a small balance to minimize risk.",
   "profile.nightly.recommendation2": "Segnalate eventuali problemi a EMURGO attraverso il canale Yoroi Nightly.",
   "profile.nightly.recommendationHeader": "Raccomandiamo che:",
   "profile.nightly.title": "Yoroi Nightly",
@@ -294,7 +293,6 @@
   "sidebar.settings": "Impostazioni",
   "sidebar.transfer": "Richiesta / Trasferimento",
   "sidebar.wallets": "I miei portafogli",
-  "testnet.label.message": "ATTENZIONE: questa è una rete {network}. ADA qui non ha alcun valore monetario. Per ulteriori informazioni, consulta le domande frequenti su {faqLink}",
   "testnet.shelley.label.message": "SEI SULLA RETE TESTNET ({network}).",
   "transfer.form.instructions.step1.text": "Ci vorrà circa 1 minuto per ripristinare il tuo saldo. Nel passaggio successivo, ti verrà presentata una transazione che trasferirà tutti i tuoi fondi. Si prega di rivedere attentamente i dettagli della transazione. Per effettuare la transazione dovrai pagare una tariffa di transazione standard sulla rete Cardano.",
   "transfer.form.masterkey.input.label": "Chiave principale",
@@ -317,7 +315,7 @@
   "transfer.summary.recoveredBalance.label": "Saldo recuperato",
   "transfer.summary.transactionFee.label": "Commissioni di transazione",
   "transfer.summary.transferButton.label": "Trasferimento fondi",
-  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
+  "upgradetx.explanation": "We found some {ticker} in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "URL copiato con successo",
   "uri.display.dialog.title": "URL generato",
   "uri.display.dialog.usabilityWarning": "Questo link può essere aperto solo da utenti che abbiano Yoroi installato sul loro browser",
@@ -344,8 +342,6 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Un portafoglio standard sostenuto da una frase di recupero.",
   "wallet.add.optionDialog.create.paperWallet.description": "I portafogli di carta possono essere creati anche su dispositivi non collegati a Internet, il che li rende adatti per la conservazione a freddo monouso.",
   "wallet.add.optionDialog.restore.dialogTitle": "Ripristina portafoglio",
-  "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
-  "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
   "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "Se hai creato un portafoglio cartaceo Yoroi (che di solito viene stampato e tenuto offline), puoi scegliere questa opzione per importare i fondi dal tuo portafoglio cartaceo Yoroi.",
@@ -432,14 +428,13 @@
   "wallet.currency.pick.header": "Pick a currency or platform",
   "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
   "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
-  "wallet.dashboard.empty.title": "Non hai ancora delegato i tuoi ADA",
+  "wallet.dashboard.empty.title": "You have not delegated your {ticker} yet",
   "wallet.dashboard.epochEndTitle": "Tempo fino alla fine dell'Epoca",
   "wallet.dashboard.epochProgress": "Progresso dell'epoca",
   "wallet.dashboard.epochTooltip": "Note: only the first reward after delegating will take {numEpochs} epochs. Afterwards, rewards come every epoch.",
   "wallet.dashboard.graph.dayToggleLabel": "Giorno (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "Epoca ({epochLength} giorni)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Epoca (1 giorno)",
-  "wallet.dashboard.graph.tooltip.epoch": "Totale ADA inviati",
   "wallet.dashboard.graphType.costs": "Costi",
   "wallet.dashboard.graphType.positions": "Posizioni",
   "wallet.dashboard.lessthan.header": "Ci sono molte ragioni per cui potreste ricevere meno premi di quanto vi aspettavate. Qui ne elenchiamo alcune comuni",
@@ -468,12 +463,12 @@
   "wallet.dashboard.stakePool.stake": "Stake",
   "wallet.dashboard.stakePool.title": "Stake Pool delegata",
   "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
-  "wallet.dashboard.summary.adaTitle": "Totale ADA",
+  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "Totale delegato",
-  "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA può essere corretto",
-  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} ADA non può essere corretto",
-  "wallet.dashboard.summary.mangled.line1": "Il tuo portafoglio {adaAmount} ADA con diverse preferenza di delega.",
-  "wallet.dashboard.summary.mangled.line2": "Raccomandiamo {transactionMessage} di delegare gli ADA",
+  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
+  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preferences.",
+  "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "fai una transazione",
   "wallet.dashboard.summary.note": "Meno di quanto vi aspettavate?",
   "wallet.dashboard.summary.rewardsTitle": "Totale ricompense",
@@ -499,7 +494,7 @@
   "wallet.delegation.transaction.success.explanation": "Tieni traccia dello stato della stake pool e del tempo rimanente per ricevere una ricompensa dalla pagina Dashboard",
   "wallet.delegation.transaction.success.title": "Delegato con successo",
   "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
-  "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
+  "wallet.deprecation.byronLine2": "To delegate your {ticker} you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "Le autorizzazioni necessarie non sono state concesse dall'utente. Per favore riprova.",
   "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
   "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
@@ -554,12 +549,12 @@
   "wallet.receive.page.internalWarning1": "Gli indirizzi interni (o \"cambio\" indirizzi) mantengono la vostra privacy oscurando quali indirizzi vi appartengono sulla blockchain",
   "wallet.receive.page.internalWarning2": "gli indirizzi qui indicati sono a scopo di verifica personale e non dovrebbero <strong>mai</strong> essere usati.",
   "wallet.receive.page.label": "Label",
-  "wallet.receive.page.mangledWarning1": "Gli indirizzi Lacerati contribuiscono al bilancio degli ADA, ma hanno la preferenza di delega non corretta",
+  "wallet.receive.page.mangledWarning1": "Mangled addresses contribute to your {ticker} balance but have the incorrect delegation preference",
   "wallet.receive.page.noResultsFoundLabel": "No results found",
   "wallet.receive.page.notFoundAnyAddresses": "We couldn't find any addresses matching your filter.",
   "wallet.receive.page.outputAmountUTXO": "Balance (UTXO sum)",
   "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
-  "wallet.receive.page.rewardAddressLine2": "You cannot send ADA to reward addresses, but we show it for personal auditing purposes",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send {ticker} to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "Correggi le preferenze di delega",
   "wallet.receive.page.verifyAddressLabel": "Verifica indirizzo",
   "wallet.receive.page.walletAddressLabel": "Il tuo indirizzo del portafoglio",
@@ -604,13 +599,13 @@
   "wallet.send.confirmationDialog.totalLabel": "Totale",
   "wallet.send.confirmationDialog.walletPasswordFieldPlaceholder": "Digita la tua password di spesa",
   "wallet.send.confirmationDialog.walletPasswordLabel": "Password di spesa",
-  "wallet.send.form.amount.equalsAda": "equivalente {importo} ADA",
   "wallet.send.form.calculatingFee": "Calcolo della commissione...",
   "wallet.send.form.cannotSendToLegacy": "Non è possibile inviare a indirizzi legacy (qualsiasi indirizzo creato prima del 29 novembre 2019)",
+  "wallet.send.form.cannotSendToP2SH": "You cannot send to pay-to-script-hash addresses",
   "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
   "wallet.send.form.errors.invalidAddress": "Si prega di inserire un indirizzo valido.",
   "wallet.send.form.errors.invalidAmount": "Si prega di inserire un importo valido.",
-  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
+  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} {ticker}.",
   "wallet.send.form.receiver.hint": "Indirizzo del portafoglio",
   "wallet.send.form.receiver.label": "Destinatario",
   "wallet.send.form.sendAll.checkboxLabel": "Invia tutti {currency}",
@@ -711,12 +706,12 @@
   "wallet.transfer.deregister.line5": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
   "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
-  "wallet.transfer.instruction": "Qualsiasi richiesta di ADA verrà trasferito sul portafoglio selezionato",
+  "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "NON è necessario rimuovere la delega prima di cambiare pool",
   "wallet.undelegation.transaction.explanationLine2": "Ci vorranno 2 epoche dopo la fine dell'epoca attuale perché il ritiro delega abbia effetto",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
   "wallet.unsupported.title": "Wallet type not supported",
-  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} ADA from your deposit",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copia negli appunti",
   "widgets.explorer.tooltip": "Vai a {websiteName}",
   "widgets.warningBox.headerText": "ATTENZIONE:",
