--- a/app/i18n/locales/ko-KR.json
+++ b/app/i18n/locales/ko-KR.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "이 API 방식은 아직 사용되고 있지 않습니다.",
   "api.errors.GenericApiError": "오류가 발생했습니다. 나중에 다시 시도하십시오.",
   "api.errors.IncorrectPasswordError": "지갑 암호가 틀렸습니다.",
-  "api.errors.NotEnoughMoneyToSendError": "이 전송을 위한 ADA가 부족합니다.",
+  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
   "api.errors.PromiseNotCalledYetError": "실행이 끝나기 전에 결과에 접근할 수 없습니다.",
   "api.errors.ReportRequestError": "이 지원 요청을 전송하는 데 문제가 있습니다.",
   "api.errors.WalletAlreadyImportedError": "가져오려는 지갑이 이미 존재합니다.",
@@ -128,7 +128,6 @@
   "global.passwordInstructionsPaperWallet": "참고: 종이 지갑 암호는 적어도 <strong>10 글자 이상</strong> 이어야 합니다.",
   "global.staleTxnWarningLine1": "이 거래를 생성한 후에 당신의 지갑에 변동이 발생했습니다.",
   "global.staleTxnWarningLine2": "이 거래를 전송할 수 있으나, 실패할 가능성이 있습니다.",
-  "global.unit.ada": "ADA",
   "global.uriExplanation": "카르다노 지불 URL을 통해 전송 요청을 URL 형태로 지인에게 쉽게 공유하거나 사무용으로 사용할 수 있습니다.",
   "global.uriSchemeTitleLabel": "카르다노 지불 URLs",
   "global.wrongNetwork.address": "Wrong network for address.",
@@ -147,7 +146,7 @@
   "myWallets.wallets.sumInfoText": "총 지갑 잔고",
   "networkError.label.message": "경고: 서버와의 연결에 실패했습니다. <br> 당신의 인터넷 연결 상태 또는  <a target='blank' href='https://twitter.com/YoroiWallet'> 저희의 트위터 계정 </a>을 참고해주세요.. <br> 현재 표시되어있는 잔액이나 거래 내역은 서버 연결이 성공할 때 까지는 정확하지 않을 수도 있지만, 실제 잔액에는 영향을 끼치지 않습니다.",
   "nightly.banner.label.message": "당신은 현재 YOROI NIGHTLY ({network})를 사용하고 있습니다.",
-  "noticeBoard.noNoticeText.chooseAPool": "알림을 보려면 먼저 <strong>스테이킹 풀을 선택</strong>하신 후 ADA를 위임하세요.",
+  "noticeBoard.noNoticeText.chooseAPool": "To view notifications here, first <strong>choose a stake pool</strong> and delegate your {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "아직 위임을 하지 않은 상태입니다.",
   "noticeBoard.notice.costChanged.subMessage": "이전의 비용은 {oldCost} {currency} 이며, 새로운 비용은 {newCost} {currency} 입니다.",
   "noticeBoard.notice.costChanged.title": "스테이킹 풀 비용이 변경되었습니다.",
@@ -178,7 +177,7 @@
   "profile.languageSelect.title": "언어 선택",
   "profile.nightly.acknowledgedRisks": "위험 요소가 있음을 이해했습니다.",
   "profile.nightly.header": "<strong>Yoroi Nightly는 자동으로 Nightly 최신 개발 버전 기능 업데이트를 진행합니다.</strong> 추가된 새로운 기능으로 인한 의도치 않은 소프트웨어 버그나 실행 실패가 일어날 수 있습니다.",
-  "profile.nightly.recommendation1": "위험을 최소화하기 위해 적은 양의 ADA만을 지갑에 보관하세요.",
+  "profile.nightly.recommendation1": "You only use wallets with a small balance to minimize risk.",
   "profile.nightly.recommendation2": "Yoroi Nightly 채널을 통해 EMURGO에 버그 리포팅을 할 수 있습니다.",
   "profile.nightly.recommendationHeader": "권고사항:",
   "profile.nightly.title": "Yoroi Nightly",
@@ -294,7 +293,6 @@
   "sidebar.settings": "설정",
   "sidebar.transfer": "복구 / 전송",
   "sidebar.wallets": "내 지갑",
-  "testnet.label.message": "주의: 이것은 {network} 네트워크 입니다. 이곳의 ADA는 어떤 금전적인 가치를 가지지 않습니다. 더욱 자세한 정보를 원하신다면, FAQ({faqLink})를 참고하세요.",
   "testnet.shelley.label.message": "당신은 현재 테스트넷 네트워크 ({network})에 있습니다.",
   "transfer.form.instructions.step1.text": "잔고가 복원될 때까지 1분 정도 소요됩니다. 복원 후, 다이달로스 지갑에서 요로이 지갑으로 모든 자금을 이동시키는 전송이 표시됩니다. 전송 상세내역을 신중히 확인해 주십시오. 전송을 하기 위해서는 카르다노의 네트워크 표준 전송 수수료 지불이 필요합니다.",
   "transfer.form.masterkey.input.label": "마스터키",
@@ -317,7 +315,7 @@
   "transfer.summary.recoveredBalance.label": "복구된 잔액",
   "transfer.summary.transactionFee.label": "거래 수수료",
   "transfer.summary.transferButton.label": "자금 이체",
-  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
+  "upgradetx.explanation": "We found some {ticker} in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "URL이 성공적으로 복사됨",
   "uri.display.dialog.title": "URL 생성하기",
   "uri.display.dialog.usabilityWarning": "이 링크는 브라우저에 요로이가 설치한 사용자만 열 수 있습니다.",
@@ -344,8 +342,6 @@
   "wallet.add.optionDialog.create.normalWallet.description": "A standard wallet backed by a recovery phrase.",
   "wallet.add.optionDialog.create.paperWallet.description": "Paper wallets can be created even on devices not connected to the internet which makes them well-suited for single-use cold storage.",
   "wallet.add.optionDialog.restore.dialogTitle": "지갑 복구하기",
-  "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
-  "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
   "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "만약 요로이 종이 지갑을 생성했다면, 이 옵션을 통해 요로이 종이 지갑에서 자금을 가져올 수 있습니다.",
@@ -432,14 +428,13 @@
   "wallet.currency.pick.header": "Pick a currency or platform",
   "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
   "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
-  "wallet.dashboard.empty.title": "아직 ADA를 위임하지 않았습니다.",
+  "wallet.dashboard.empty.title": "You have not delegated your {ticker} yet",
   "wallet.dashboard.epochEndTitle": "에포크 종료까지 남은 시간",
   "wallet.dashboard.epochProgress": "에포크 진행 상황",
   "wallet.dashboard.epochTooltip": "Note: only the first reward after delegating will take {numEpochs} epochs. Afterwards, rewards come every epoch.",
   "wallet.dashboard.graph.dayToggleLabel": "날짜 (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "에포크 ({epochLength} 일)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "에포크 (1일)",
-  "wallet.dashboard.graph.tooltip.epoch": "총 ADA 전송량",
   "wallet.dashboard.graphType.costs": "비용",
   "wallet.dashboard.graphType.positions": "위치",
   "wallet.dashboard.lessthan.header": "보상이 예상보다 적은데에는 많은 이유가 있을 수 있습니다. 여기 가장 흔한 이유들을 정리했습니다.",
@@ -468,12 +463,12 @@
   "wallet.dashboard.stakePool.stake": "위임",
   "wallet.dashboard.stakePool.title": "위임된 스테이킹 풀",
   "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
-  "wallet.dashboard.summary.adaTitle": "누적 ADA",
+  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "총 위임량",
-  "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA가 정정될 수 있습니다.",
-  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} ADA가 정정될 수 없습니다.",
-  "wallet.dashboard.summary.mangled.line1": "당신의 지갑의 {adaAmount} ADA가 서로 다른 위임 설정을 갖고 있습니다.",
-  "wallet.dashboard.summary.mangled.line2": "ADA를 위임하기 위해 {transactionMessage} 하시기를 추천합니다.",
+  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
+  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preferences.",
+  "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "거래 생성하기",
   "wallet.dashboard.summary.note": "예상보다 적은가요?",
   "wallet.dashboard.summary.rewardsTitle": "총 보상량",
@@ -499,7 +494,7 @@
   "wallet.delegation.transaction.success.explanation": "스테이킹 풀의 상태와 다음 보상까지의 남은 시간을 대시보드 페이지에서 가져옵니다.",
   "wallet.delegation.transaction.success.title": "위임 성공",
   "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
-  "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
+  "wallet.deprecation.byronLine2": "To delegate your {ticker} you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "필요한 권한이 주어지지 않았습니다. 다시 시도해 주십시오.",
   "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
   "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
@@ -554,12 +549,12 @@
   "wallet.receive.page.internalWarning1": "내부 주소 (또는 가변 주소)는 블록체인의 어떤 주소가 당신에게 속해있는지 불분명하게 만들어 당신의 프라이버시를 지켜줍니다.",
   "wallet.receive.page.internalWarning2": "이곳에 보이는 내부 주소들은 개인 회계 사용 목적으로 제공된 것이므로 <strong>절대</strong> 사용해서는 안됩니다.",
   "wallet.receive.page.label": "Label",
-  "wallet.receive.page.mangledWarning1": "훼손된 주소들은 ADA 전체 잔액에는 포함되지만 부정확한 위임 설정을 갖고 있는 주소입니다.",
+  "wallet.receive.page.mangledWarning1": "Mangled addresses contribute to your {ticker} balance but have the incorrect delegation preference",
   "wallet.receive.page.noResultsFoundLabel": "No results found",
   "wallet.receive.page.notFoundAnyAddresses": "We couldn't find any addresses matching your filter.",
   "wallet.receive.page.outputAmountUTXO": "Balance (UTXO sum)",
   "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
-  "wallet.receive.page.rewardAddressLine2": "You cannot send ADA to reward addresses, but we show it for personal auditing purposes",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send {ticker} to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "위임 설정 정정하기",
   "wallet.receive.page.verifyAddressLabel": "주소 검증하기",
   "wallet.receive.page.walletAddressLabel": "내 지갑 주소",
@@ -604,13 +599,13 @@
   "wallet.send.confirmationDialog.totalLabel": "총",
   "wallet.send.confirmationDialog.walletPasswordFieldPlaceholder": "지출 암호 입력",
   "wallet.send.confirmationDialog.walletPasswordLabel": "지출 암호",
-  "wallet.send.form.amount.equalsAda": "= {amount} ADA",
   "wallet.send.form.calculatingFee": "수수료 계산 중...",
   "wallet.send.form.cannotSendToLegacy": "레거시 주소 (2019년 11월 29일 이전에 생성된 주소)로는 전송할 수 없습니다.",
+  "wallet.send.form.cannotSendToP2SH": "You cannot send to pay-to-script-hash addresses",
   "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
   "wallet.send.form.errors.invalidAddress": "정확한 주소를 입력하십시오.",
   "wallet.send.form.errors.invalidAmount": "정확한 금액을 입력하십시오.",
-  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
+  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} {ticker}.",
   "wallet.send.form.receiver.hint": "지갑 주소",
   "wallet.send.form.receiver.label": "받는 사람",
   "wallet.send.form.sendAll.checkboxLabel": "{currency} 를 모두 보내기",
@@ -711,12 +706,12 @@
   "wallet.transfer.deregister.line5": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
   "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
-  "wallet.transfer.instruction": "복구된 모든 ADA는 현재 선택된 지갑으로 전송됩니다.",
+  "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "위임할 풀을 바꾸기 위해서 위임 취소를 할 필요는 없습니다.",
   "wallet.undelegation.transaction.explanationLine2": "위임 취소는 해당 에포크 종료 후 2개 에포크가 지나야 처리됩니다.",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
   "wallet.unsupported.title": "Wallet type not supported",
-  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} ADA from your deposit",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "클립보드로 복사",
   "widgets.explorer.tooltip": "{websiteName} 로 가기",
   "widgets.warningBox.headerText": "주의:",
