--- a/app/i18n/locales/nl-NL.json
+++ b/app/i18n/locales/nl-NL.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "Deze API methode is nog niet aanwezig.",
   "api.errors.GenericApiError": "Fout opgetreden, probeer het later nog eens.",
   "api.errors.IncorrectPasswordError": "Foutief wachtwoord ingegeven.",
-  "api.errors.NotEnoughMoneyToSendError": "Niet genoeg ADA aanwezig om de transactie uit te voeren.",
+  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
   "api.errors.PromiseNotCalledYetError": "Resultaat bekeken voordat de uitvoering gereed was.",
   "api.errors.ReportRequestError": "Er is een probleem met het verzenden van het ondersteuningsverzoek.",
   "api.errors.WalletAlreadyImportedError": "De portemonnee die u probeert te importeren bestaat al.",
@@ -128,7 +128,6 @@
   "global.passwordInstructionsPaperWallet": "Opmerking: Het wachtwoord van een \"Papieren\" Portemonnee moet uit minstens <strong>10 karakters</strong> bestaan.",
   "global.staleTxnWarningLine1": "Uw portemonnee is veranderd sinds het aanmaken van deze transactie.",
   "global.staleTxnWarningLine2": "U kunt deze transactie nog proberen te versturen maar het het kan fout gaan.",
-  "global.unit.ada": "ADA",
   "global.uriExplanation": "Deze stellen u in staat rekeningen met vrienden of zakelijke partners te delen door eenvoudig op een URL te klikken.",
   "global.uriSchemeTitleLabel": "Cardano betaal URL's",
   "global.wrongNetwork.address": "Verkeerd netwerk voor dit adres.",
@@ -147,7 +146,7 @@
   "myWallets.wallets.sumInfoText": "Totaal saldo",
   "networkError.label.message": "WAARSCHIWING: Geen verbinding met de server.<br>Controleer uw internetverbinding of bezoek ons op: <a target='blank' href='https://twitter.com/YoroiWallet'> Twitter </a>.<br>De balans en transactiegeschiedenis kunnen afwijkingen vertonen tot onze servers weer normaal functioneren. Uw balans is niet aangetast.",
   "nightly.banner.label.message": "U BENT OP \"YOROI NIGHTLY\" ({network}).",
-  "noticeBoard.noNoticeText.chooseAPool": "Om hier meldingen te kunnen bekijken, kiest u eerst <strong> een Stakepool </strong> en delegeert u uw ADA.",
+  "noticeBoard.noNoticeText.chooseAPool": "Om hier meldingen te bekijken, moet u eerst <strong> een pool kiezen </strong> en uw {ticker} delegeren.",
   "noticeBoard.noNoticeText.notDelegatedYet": "U heeft nog geen stemmen gedelegeerd.",
   "noticeBoard.notice.costChanged.subMessage": "Oude kosten {oldCost} {currency}, nieuwe kosten zijn {newCost} {currency}",
   "noticeBoard.notice.costChanged.title": "De kosten van de Stakepool zijn veranderd",
@@ -178,7 +177,7 @@
   "profile.languageSelect.title": "Taalkeuze",
   "profile.nightly.acknowledgedRisks": "Ik begrijp het risico",
   "profile.nightly.header": "<strong>Yoroi Nightly wordt elke nacht automatisch bijgewerkt</strong> met de nieuwste lopende functies. Hoewel we nooit opzettelijk bugs of gebroken code zullen pushen, kunnen functies nog steeds in uitvoering zijn of fouten bevatten.",
-  "profile.nightly.recommendation1": "Gebruik alleen portemonnees met een kleine hoeveelheid ADA om het risico te minimaliseren.",
+  "profile.nightly.recommendation1": "Je gebruikt alleen portemonnees met een laag saldo om risico's te minimaliseren.",
   "profile.nightly.recommendation2": "Eventuele problemen worden aan EMURGO via het Yoroi Nightly-kanaal gemeldt.",
   "profile.nightly.recommendationHeader": "We bevelen aan dat:",
   "profile.nightly.title": "Yoroi \"Nightly\"",
@@ -294,7 +293,6 @@
   "sidebar.settings": "Instellingen",
   "sidebar.transfer": "Claim / Overdracht",
   "sidebar.wallets": "Mijn Portemonnees",
-  "testnet.label.message": "WAARSCHUWING: Dit is een {network} netwerk. ADA heeft hier geen monetaire waarde. Voor meer informatie bekijk de \"FAQ\" op {faqLink}",
   "testnet.shelley.label.message": "U BENT OP HET TESTNET NETWERK ({network}).",
   "transfer.form.instructions.step1.text": "Het kost ongeveer 1 minuut om uw balans te controleren. In de volgende stap wordt u een transactie getoond dat all uw fondsen zal verplaatsen. Controleer de gegevens van de transactie zorgvuldig. U dient een standaard transactievergoeding te betalen op het Cardano netwerk om de transactie uit te voeren.",
   "transfer.form.masterkey.input.label": "Hoofdsleutel",
@@ -317,7 +315,7 @@
   "transfer.summary.recoveredBalance.label": "Herstelde balans",
   "transfer.summary.transactionFee.label": "Transactiekosten",
   "transfer.summary.transferButton.label": "Versturen Fondsen",
-  "upgradetx.explanation": "We hebben een aantal ADA gevonden in uw portemonnee uit het Byron-tijdperk. Wilt u deze overzetten naar uw nieuwe Shelley-portemonnee?",
+  "upgradetx.explanation": "We hebben een {ticker} gevonden in uw portemonnee uit het Byron-tijdperk. Wilt u deze overzetten naar uw nieuwe (Shelley) portemonnee?",
   "uri.display.dialog.copy.notification": "URL succesvol gekopieerd",
   "uri.display.dialog.title": "Maar een URL aan",
   "uri.display.dialog.usabilityWarning": "Deze link kan alleen geopend worden door gebruikers die Yoroi in hun browser hebben geïnstalleerd",
@@ -344,8 +342,6 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Een standaardportemonnee, ondersteund door een herstelzin.",
   "wallet.add.optionDialog.create.paperWallet.description": "\"Papieren\" portemonnees kunnen zelfs worden gemaakt op apparaten die niet zijn verbonden met internet, waardoor ze zeer geschikt zijn voor eenmalig gebruik in een koude opslag.",
   "wallet.add.optionDialog.restore.dialogTitle": "Herstel Portemonnee",
-  "wallet.add.optionDialog.restore.normal24Wallet.description": "Als uw herstelzin uit 24 woorden bestaat dan kiest u deze optie om uw portemonnee te herstellen.",
-  "wallet.add.optionDialog.restore.normal24Wallet.title": "Voer de 24 woorden van de herstelzin in",
   "wallet.add.optionDialog.restore.normalWallet.description": "Als u een herstelzin heeft die uit {length} woorden bestaat, kiest u deze optie om uw portemonnee te herstellen.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Voer een herstelzin van {length} woorden in",
   "wallet.add.optionDialog.restore.paperWallet.description": "Als u een Yoroi \"Papier\" Portemonnee gegenereerd hebt (die meestal wordt afgedrukt en offline wordt bewaard), kunt u deze optie kiezen om het geld uit je Yoroi \"Papier\" Portemonnee te importeren.",
@@ -432,14 +428,13 @@
   "wallet.currency.pick.header": "Kies een valuta of een platform",
   "wallet.currency.pick.testnetDescription": "Testnet gebruikt een alternatieve Blockchain voor testen. Hierdoor kunnen applicatieontwikkelaars of testers experimenteren, zonder echte munten te hoeven gebruiken.",
   "wallet.dashboard.empty.text": "Ga naar de delegatiepagina om uw Stakepool voor delegatie te kiezen.",
-  "wallet.dashboard.empty.title": "U heeft uw ADA nog niet gedelegeerd",
+  "wallet.dashboard.empty.title": "U heeft uw {ticker} nog niet gedelegeerd",
   "wallet.dashboard.epochEndTitle": "Tijd tot einde periode",
   "wallet.dashboard.epochProgress": "Periode voortgang",
   "wallet.dashboard.epochTooltip": "Opmerking: alleen de eerste beloning na het delegeren duurt {numEpochs} tijdvakken. Daarna komen beloningen in elk tijdperk.",
   "wallet.dashboard.graph.dayToggleLabel": "Dag (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "Periode ({epochLength} dagen)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Periode (1 dag)",
-  "wallet.dashboard.graph.tooltip.epoch": "Totaal ADA verzonden",
   "wallet.dashboard.graphType.costs": "Kosten",
   "wallet.dashboard.graphType.positions": "Posities",
   "wallet.dashboard.lessthan.header": "Er zijn veel redenen waarom u minder beloning krijgt dan u had verwacht. We vermelden hier enkele veelvoorkomende situaties",
@@ -468,12 +463,12 @@
   "wallet.dashboard.stakePool.stake": "Stem",
   "wallet.dashboard.stakePool.title": "Stakepool gedelegeerd",
   "wallet.dashboard.stakePool.viewWebpage": "Bekijk de Stakepool web pagina",
-  "wallet.dashboard.summary.adaTitle": "Totaal ADA",
+  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "Totaal gedelegeerd",
-  "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA kan gecorrigeerd worden",
-  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} ADA kan niet gecorrigeerd worden",
-  "wallet.dashboard.summary.mangled.line1": "Uw Portemonnee heeft {adaAmount} ADA met een andere delegatie voorkeur.",
-  "wallet.dashboard.summary.mangled.line2": "Wij bevelen {transactionMessage} aan om ADA naar toe te delegeren",
+  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} kan gecorrigeerd worden",
+  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} kan niet gecorrigeerd worden",
+  "wallet.dashboard.summary.mangled.line1": "Uw portemonnee heeft {adaAmount} {ticker} met andere voorkeur voor delegatie.",
+  "wallet.dashboard.summary.mangled.line2": "We raden {transactionMessage} aan om de {ticker} te delegeren",
   "wallet.dashboard.summary.mangled.makeTx": "voer een transactie uit",
   "wallet.dashboard.summary.note": "Minder dan verwacht?",
   "wallet.dashboard.summary.rewardsTitle": "Totale beloning",
@@ -499,7 +494,7 @@
   "wallet.delegation.transaction.success.explanation": "Volg de status van de Stakepool en de resterende tijd om een ​​beloning te ontvangen via de Overzichtspagina",
   "wallet.delegation.transaction.success.title": "Met succes gedelegeerd",
   "wallet.deprecation.byronLine1": "De upgrade van het Shelley-protocol voegt een nieuw type Shelley-portefeuille toe dat delegatie ondersteunt.",
-  "wallet.deprecation.byronLine2": "Om uw ADA te delegeren, moet u upgraden naar een Shelley-portemonnee.",
+  "wallet.deprecation.byronLine2": "Om uw {ticker} te delegeren, moet u upgraden naar een Shelley-portemonnee.",
   "wallet.hw.common.error.101": "Vereiste toestemming was niet gegeven door de gebruiker, Probeer het opnieuw.",
   "wallet.hw.incorrectDevice": "Onjuist apparaat gedetecteerd. Verwachte het apparaat {expectedDeviceId}, maar kreeg apparaat {responseDeviceId}. Sluit het juiste apparaat aan",
   "wallet.hw.incorrectVersion": "Onjuiste versie van het apparaat gedetecteerd. We ondersteunen versie {supportedVersions} maar u heeft versie {responseVersion}.",
@@ -554,12 +549,12 @@
   "wallet.receive.page.internalWarning1": "Interne adressen (of aliassen) waarborgen uw privacy door uw adressen te verbergen op de blockchain",
   "wallet.receive.page.internalWarning2": "adressen worden hier weergegeven voor persoonlijke controledoeleinden en mogen <strong> nooit </strong> worden gebruikt.",
   "wallet.receive.page.label": "Label",
-  "wallet.receive.page.mangledWarning1": "Verminkte adressen dragen bij aan uw ADA-saldo, maar hebben de verkeerde delegatievoorkeur",
+  "wallet.receive.page.mangledWarning1": "Verminkte adressen dragen bij aan uw {ticker} -saldo, maar hebben de verkeerde delegatievoorkeur",
   "wallet.receive.page.noResultsFoundLabel": "Geen resultaten gevonden",
   "wallet.receive.page.notFoundAnyAddresses": "We hebben geen adressen gevonden die met je filter overeenkomen.",
   "wallet.receive.page.outputAmountUTXO": "Saldo (UTXO som)",
   "wallet.receive.page.rewardAddressLine1": "Uw beloningsadres bevat uw beloningen en wordt gebruikt om eventuele wijzigingen in uw delegatievoorkeur te valideren",
-  "wallet.receive.page.rewardAddressLine2": "U kunt geen ADA naar vergoedingsadressen sturen, maar we tonen het voor persoonlijke controledoeleinden",
+  "wallet.receive.page.rewardAddressLine2": "U kunt geen {ticker} naar beloningsadressen sturen, maar we tonen het voor persoonlijke controledoeleinden",
   "wallet.receive.page.unmangeLabel": "Corrigeer delegatie voorkeur",
   "wallet.receive.page.verifyAddressLabel": "Controleer het adres",
   "wallet.receive.page.walletAddressLabel": "Uw portemonnee adres",
@@ -604,13 +599,13 @@
   "wallet.send.confirmationDialog.totalLabel": "Totaal",
   "wallet.send.confirmationDialog.walletPasswordFieldPlaceholder": "Geef uw nieuwe betalingswachtwoord op",
   "wallet.send.confirmationDialog.walletPasswordLabel": "Betalingswachtwoord",
-  "wallet.send.form.amount.equalsAda": "komt overeen met {amount} ADA",
   "wallet.send.form.calculatingFee": "Berekenen van de vergoeding...",
   "wallet.send.form.cannotSendToLegacy": "U kunt niet verzenden naar oude adressen (adressen, aangemaakt voor 29 november 2019)",
+  "wallet.send.form.cannotSendToP2SH": "U kunt niets naar \"pay-to-script-hash\"-adressen verzenden",
   "wallet.send.form.cannotSendToReward": "Je kunt niets versturen naar een \"beloning\" account",
   "wallet.send.form.errors.invalidAddress": "Voer alstublieft een geldig adres in.",
   "wallet.send.form.errors.invalidAmount": "Voer alstublieft een geldig bedrag in.",
-  "wallet.send.form.errors.tooSmallUtxo": "Kan niet minder dan {minUtxo} ADA verzenden.",
+  "wallet.send.form.errors.tooSmallUtxo": "Kan niet minder dan {minUtxo} {ticker} verzenden.",
   "wallet.send.form.receiver.hint": "Portemonnee adres",
   "wallet.send.form.receiver.label": "Ontvanger",
   "wallet.send.form.sendAll.checkboxLabel": "Verstuur alle {currency}",
@@ -711,12 +706,12 @@
   "wallet.transfer.deregister.line5": "Uitschrijven betekent dat deze sleutel geen beloningen meer ontvangt totdat u de stemsleutel opnieuw registreert (meestal door deze opnieuw te delegeren naar een pool)",
   "wallet.transfer.deregister.noNeedToDeregister": "U hoeft zich NIET af te melden om te delegeren naar een andere Stakepool. U kunt uw delegatievoorkeur op elk moment wijzigen",
   "wallet.transfer.deregister.title": "Ook de Stakepool sleutel uitschrijven?",
-  "wallet.transfer.instruction": "Elke ADA die wordt geclaimd, wordt overgebracht naar de, huidige, gekozen Portemonnee",
+  "wallet.transfer.instruction": "Elke geclaimde {ticker} wordt overgebracht naar de portemonnee die nu door u gekozen is",
   "wallet.undelegation.transaction.explanationLine1": "U hoeft de delegatie NIET ongedaan te maken om van Stakepool te wisselen",
   "wallet.undelegation.transaction.explanationLine2": "Het duurt 2 Epochs (tijdperken) na het einde van het huidige tijdvak om de delegatie in werking te laten treden",
   "wallet.unsupported.subtitle": "De gekozen portemonnee ondersteunt deze functionaliteit niet",
   "wallet.unsupported.title": "Dit type portemonnee wordt niet ondersteund",
-  "wallet.withdrawal.transaction.unregister": "Bij deze transactie worden een of meer \"Stem\" sleutels afgemeld, waardoor u uw ADA {refundAmount} van uw storting terugkrijgt",
+  "wallet.withdrawal.transaction.unregister": "Met deze transactie wordt de registratie van een of meer stemsleutels ongedaan gemaakt, waardoor u uw {refundAmount} {ticker} van uw storting terugkrijgt",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Kopieer naar klembord",
   "widgets.explorer.tooltip": "Ga naar {websiteName}",
   "widgets.warningBox.headerText": "ATTENTIE:",
