--- a/app/i18n/locales/pt-BR.json
+++ b/app/i18n/locales/pt-BR.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "Este método de API ainda não está implementado.",
   "api.errors.GenericApiError": "Ocorreu um erro. Por favor tente novamente mais tarde.",
   "api.errors.IncorrectPasswordError": "Senha incorreta",
-  "api.errors.NotEnoughMoneyToSendError": "Saldo insuficiente para realizar essa transação.",
+  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
   "api.errors.PromiseNotCalledYetError": "Resultado acessado antes da conclusão da execução.",
   "api.errors.ReportRequestError": "Houve um problema ao enviar a solicitação para o suporte.",
   "api.errors.WalletAlreadyImportedError": "A carteira que você está tentando importar já existe.",
@@ -128,7 +128,6 @@
   "global.passwordInstructionsPaperWallet": "Nota: a senha da Carteira de papel precisa ter pelo menos <strong> 10 caracteres </strong>.",
   "global.staleTxnWarningLine1": "Sua carteira foi alterada desde a criação dessa transação.",
   "global.staleTxnWarningLine2": "Você ainda pode enviar essa transação mas ela deve falhar.",
-  "global.unit.ada": "Ada",
   "global.uriExplanation": "Eles permitem que você compartilhe faturas facilmente com amigos e empresas clicando em um URL.",
   "global.uriSchemeTitleLabel": "URLs de pagamento Cardano",
   "global.wrongNetwork.address": "Endereço errado. Pertence à uma rede diferente.",
@@ -147,7 +146,7 @@
   "myWallets.wallets.sumInfoText": "Saldo total da carteira",
   "networkError.label.message": "AVISO: Falha na conexão com o servidor. <br> Por favor, verifique sua conexão com a internet ou <a target='blank' href='https://twitter.com/YoroiWallet'> nossa conta no Twitter </a>. <br> O saldo exibido e o histórico de transações podem parecer incorretos até que nossos servidores voltem ao normal, mas seu saldo real não é afetado.",
   "nightly.banner.label.message": "VOCÊ ESTÁ EM YOROI NIGHTLY ({network}).",
-  "noticeBoard.noNoticeText.chooseAPool": "Para visualizar as notificações aqui, primeiro <strong>escolha um stake pool</strong> e delegue sua ADA.",
+  "noticeBoard.noNoticeText.chooseAPool": "Para visualizar notificações aqui, primeiro <strong> escolha uma piscina de participação e delegue sua {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "Você ainda não delegou o seu stake.",
   "noticeBoard.notice.costChanged.subMessage": "O custo anterior era {oldCost} {currency} e o novo custo será {newCost} {currency}",
   "noticeBoard.notice.costChanged.title": "O custo do stake pool mudou",
@@ -178,7 +177,7 @@
   "profile.languageSelect.title": "Seleção de linguagem",
   "profile.nightly.acknowledgedRisks": "Eu entendo o risco",
   "profile.nightly.header": "<strong> Yoroi Nightly atualiza automaticamente todas as versões Nightly</strong> com os mais recentes recursos em andamento. Embora nunca intencionalmente atualizaremos com bugs ou códigos quebrados, os recursos ainda podem estar em andamento ou conter erros.",
-  "profile.nightly.recommendation1": "Só use carteiras com uma pequena quantidade de ADA para minimizar os riscos.",
+  "profile.nightly.recommendation1": "Você usa carteiras com saldo pequeno para minimizar seu risco.",
   "profile.nightly.recommendation2": "Você pode comunicar quaisquer problemas a EMURGO por meio do canal Yoroi Nightly.",
   "profile.nightly.recommendationHeader": "Recomendamos que:",
   "profile.nightly.title": "Yoroi Nightly",
@@ -294,7 +293,6 @@
   "sidebar.settings": "Configurações",
   "sidebar.transfer": "Reivindicar / Transferir",
   "sidebar.wallets": "Minhas carteiras",
-  "testnet.label.message": "AVISO: esta é uma rede {network}. ADA não tem valor monetário aqui. Para mais informações, confira as perguntas frequentes em {faqLink}",
   "testnet.shelley.label.message": "VOCÊ ESTA NA REDE DE TESTES ({network}).",
   "transfer.form.instructions.step1.text": "Demora cerca de 1 minuto para restaurar o seu saldo. Na próxima etapa, você será apresentado a uma transação que movimentará todos os seus fundos. Por favor, revise os detalhes da transação com cuidado. Você precisará pagar uma taxa de transação padrão na rede Cardano para realizar a transação.",
   "transfer.form.masterkey.input.label": "Chave mestra",
@@ -317,7 +315,7 @@
   "transfer.summary.recoveredBalance.label": "Saldo recuperado",
   "transfer.summary.transactionFee.label": "Taxas de transação",
   "transfer.summary.transferButton.label": "Transferir fundos",
-  "upgradetx.explanation": "Você tem saldo em sua carteira da era Byron. Você gostaria de transferir isso para sua nova carteira da fase Shelley?",
+  "upgradetx.explanation": "Encontramos {ticker} em sua carteira da era Byron. Você gostaria de transferir esse valor para sua nova carteira Shelley?",
   "uri.display.dialog.copy.notification": "URL copiada com sucesso",
   "uri.display.dialog.title": "URL gerada",
   "uri.display.dialog.usabilityWarning": "Esse link pode ser aberto apenas por usuários com o Yoroi instalado no navegador",
@@ -344,10 +342,8 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Um carteira padrão endossada por uma frase de restauração.",
   "wallet.add.optionDialog.create.paperWallet.description": "Carteira de papel pode ser criada por dispositivos não conectados com a internet o que faz dela muito conveniente para um único uso como armazenamento frio.",
   "wallet.add.optionDialog.restore.dialogTitle": "Restaurar wallet",
-  "wallet.add.optionDialog.restore.normal24Wallet.description": "Se você tiver uma frase de recuperação composta por 24 palavras, escolha esta opção para restaurar sua carteira.",
-  "wallet.add.optionDialog.restore.normal24Wallet.title": "Insira sua frase de recuperação constituída de 24 palavras",
-  "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
-  "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
+  "wallet.add.optionDialog.restore.normalWallet.description": "Se você possui uma frase de recuperação consistindo de {lengh} palavras, escolha essa opção para restaurar sua carteira.",
+  "wallet.add.optionDialog.restore.normalWallet.title": "Digite as {length} palavras",
   "wallet.add.optionDialog.restore.paperWallet.description": "Se você possui uma Yoroi paper wallet, a qual é usualmente imprimida e mantida offline, você pode escolher esta opção para importar os fundos da mesma.",
   "wallet.add.optionDialog.restore.paperWallet.title": "Paper Wallet",
   "wallet.add.optionDialog.walletEra.byronEra.description": "As carteiras criadas antes de 29 de julho de 2020 são carteiras da era Byron e não podem delegar.",
@@ -432,14 +428,13 @@
   "wallet.currency.pick.header": "Escolha a moeda ou plataforma",
   "wallet.currency.pick.testnetDescription": "Rede de teste é uma rede alternativa usada para testes apenas. Isso facilita o uso por desenvolvedores de aplicações e usuários testar, sem ter que usar moedas reais.",
   "wallet.dashboard.empty.text": "Vá para a página de delegação para escolher em qual stake pool você deseja delegar.",
-  "wallet.dashboard.empty.title": "Você não delegou a sua ADA ainda",
+  "wallet.dashboard.empty.title": "Você ainda não delegou sua {ticker}",
   "wallet.dashboard.epochEndTitle": "Tempo até o fim da Época",
   "wallet.dashboard.epochProgress": "Progresso da Época",
   "wallet.dashboard.epochTooltip": "Nota: Apenas as primeiras recompensas irão levar {numEpochs} para serem pagas. Após isso, irá receber a no início de cada época.",
   "wallet.dashboard.graph.dayToggleLabel": "Dia (UCT)",
   "wallet.dashboard.graph.epochAxisLabel": "Época h ({epochLength} dias)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Época (1 dia)",
-  "wallet.dashboard.graph.tooltip.epoch": "Total ADA Enviada",
   "wallet.dashboard.graphType.costs": "Custos",
   "wallet.dashboard.graphType.positions": "Posições",
   "wallet.dashboard.lessthan.header": "Há muitas razões pelas quais você pode receber menos recompensas do que o esperado. Listamos algumas das mais comuns aqui",
@@ -468,12 +463,12 @@
   "wallet.dashboard.stakePool.stake": "Stake",
   "wallet.dashboard.stakePool.title": "Stake Pool Delegado",
   "wallet.dashboard.stakePool.viewWebpage": "Exibir página do pool",
-  "wallet.dashboard.summary.adaTitle": "Total ADA",
+  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "Total Delegado",
-  "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA pode ser corrigida",
-  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} ADA não pode ser corrigida",
-  "wallet.dashboard.summary.mangled.line1": "Sua carteira possui {adaAmount} ADA com diferentes preferências de delegação.",
-  "wallet.dashboard.summary.mangled.line2": "Nós recomendamos {transactionMessage} para delegação de ADA",
+  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} pode ser corrigido",
+  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} não pode ser corrigido",
+  "wallet.dashboard.summary.mangled.line1": "Sua carteira tem {adaAmount} {ticker} com preferência de delegação diferente.",
+  "wallet.dashboard.summary.mangled.line2": "Nós recomendamos {transactionMessage} para delegar a {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "fazer uma transação",
   "wallet.dashboard.summary.note": "Menos do que o esperado?",
   "wallet.dashboard.summary.rewardsTitle": "Total de recompensas",
@@ -499,7 +494,7 @@
   "wallet.delegation.transaction.success.explanation": "Acompanhe o status do stake pool e o tempo restante para receber uma recompensa na página do Painel",
   "wallet.delegation.transaction.success.title": "Delegado com sucesso",
   "wallet.deprecation.byronLine1": "A atualização do protocolo Shelley adiciona um novo tipo de carteira Shelley que suporta delegação.",
-  "wallet.deprecation.byronLine2": "Para delegar seu ADA, você precisará atualizar para uma carteira Shelley.",
+  "wallet.deprecation.byronLine2": "Para delegar sua {ticker} você precisará atualizar para uma carteira Shelley.",
   "wallet.hw.common.error.101": "As permissões necessárias não foram concedidas pelo usuário. Por favor tente novamente.",
   "wallet.hw.incorrectDevice": "Dispositivo incorreto detectado. Dispositivo esperado {expectedDeviceId}, mas obtido dispositivo {responseDeviceId}. Por favor, conecte o dispositivo correto",
   "wallet.hw.incorrectVersion": "Versão incorreta do dispositivo detectada. Oferecemos suporte à versão {supportedVersions}, mas você possui a versão {responseVersion}.",
@@ -554,12 +549,12 @@
   "wallet.receive.page.internalWarning1": "Endereços internos (ou \"modificar\" endereços) mantêm sua privacidade ocultando quais endereços pertencem a você na blockchain",
   "wallet.receive.page.internalWarning2": "os endereços são mostrados aqui para fins de auditoria pessoal e <strong> nunca </strong> devem ser usados.",
   "wallet.receive.page.label": "Rótulo",
-  "wallet.receive.page.mangledWarning1": "Endereços Mangled contribuem para seu saldo de ADA, mas têm a preferência de delegação incorreta",
+  "wallet.receive.page.mangledWarning1": "Endereços mutilados contribuem para o seu saldo de {ticker} mas tem preferência de delegação errada",
   "wallet.receive.page.noResultsFoundLabel": "Resultados não encontrados",
   "wallet.receive.page.notFoundAnyAddresses": "Não encontramos nenhum endereço coincidindo com seu filtro.",
   "wallet.receive.page.outputAmountUTXO": "Balanço (soma UTXO)",
   "wallet.receive.page.rewardAddressLine1": "Seu endereço de recompensas armazena suas recompensas e é usado para validar qualquer mudança na suas preferências de delegação",
-  "wallet.receive.page.rewardAddressLine2": "Você não pode enviar ADA para um endereço de recompensa, mas mostramos esse endereço para fins de auditoria pessoal",
+  "wallet.receive.page.rewardAddressLine2": "Você não pode enviar {ticker} para endereços de recompensa, mas mostramos isso para sua auditoria pessoal",
   "wallet.receive.page.unmangeLabel": "Preferência de delegação correta",
   "wallet.receive.page.verifyAddressLabel": "Verificar endereço",
   "wallet.receive.page.walletAddressLabel": "O endereço da sua carteira",
@@ -604,16 +599,16 @@
   "wallet.send.confirmationDialog.totalLabel": "Total",
   "wallet.send.confirmationDialog.walletPasswordFieldPlaceholder": "Digite sua senha de pagamentos",
   "wallet.send.confirmationDialog.walletPasswordLabel": "Senha de pagamentos",
-  "wallet.send.form.amount.equalsAda": "Valor: {amount} ADA",
   "wallet.send.form.calculatingFee": "Calculando taxas...",
   "wallet.send.form.cannotSendToLegacy": "Você não pode enviar para endereços antigos (qualquer endereço criado antes de 29 de novembro de 2019)",
+  "wallet.send.form.cannotSendToP2SH": "Você não enviar para endereços pay-to-script-hash",
   "wallet.send.form.cannotSendToReward": "Você não pode enviar para uma conta de recompensa",
   "wallet.send.form.errors.invalidAddress": "Por favor insira um endereço válido.",
   "wallet.send.form.errors.invalidAmount": "Por favor insira um valor válido.",
-  "wallet.send.form.errors.tooSmallUtxo": "Não é possível enviar menos de {minUtxo} ADA.",
+  "wallet.send.form.errors.tooSmallUtxo": "Não pode enviar menos de {minUtxo} {ticker}.",
   "wallet.send.form.receiver.hint": "Endereço da Wallet",
   "wallet.send.form.receiver.label": "Receptor",
-  "wallet.send.form.sendAll.checkboxLabel": "Vender todas {currency}",
+  "wallet.send.form.sendAll.checkboxLabel": "Enviar todas {currency}",
   "wallet.send.form.sendingIsDisabled": "Não é possível realizar uma nova transação enquanto outra ainda está pendente.",
   "wallet.send.form.transactionFeeError": "Ada insuficiente para suprir as taxas. Tente o envio de uma quantia menor.",
   "wallet.send.ledger.confirmationDialog.info.line.1": "Após conectar o dispositivo Ledger à porta USB do computador, pressione o botão Send na própria Ledger.",
@@ -711,12 +706,12 @@
   "wallet.transfer.deregister.line5": "Desaverbar significa que está chave não receberá recompensas até que você registre a chave de stake novamente, (normalmente isso é feito delegando para uma pool novamente)",
   "wallet.transfer.deregister.noNeedToDeregister": "Você NÃO precisa desaverbar sua chave para delegar para uma pool diferente. Você pode mudar sua escolha a qualquer momento",
   "wallet.transfer.deregister.title": "Também desregistrar a chave de staking?",
-  "wallet.transfer.instruction": "Toda ADA solicitada será transferida para sua carteira selecionada recentemente",
+  "wallet.transfer.instruction": "Toda {ticker} retirada será transferida sua carteira selecionada",
   "wallet.undelegation.transaction.explanationLine1": "Você NÃO precisa desfazer a delegação para mudar de stake pool",
   "wallet.undelegation.transaction.explanationLine2": "Levará duas épocas após o final da época atual para que a remoção da delegação entre em vigor",
   "wallet.unsupported.subtitle": "A carteira selecionada não suporta esta funcionalidade",
   "wallet.unsupported.title": "Tipo de carteira não suportado",
-  "wallet.withdrawal.transaction.unregister": "Essa transação irá aposentar uma ou mais chaves de staking, isso lhe reembolsará as ADAs pagas como depósito",
+  "wallet.withdrawal.transaction.unregister": "Essa transação irá revogar uma ou mais chave de participação, reembolsando suas {refundAmount}{ticker} pagas como depósito no registro de sua chave de participação",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copiar para área de transferência",
   "widgets.explorer.tooltip": "Ir para {websiteName}",
   "widgets.warningBox.headerText": "ATENÇÃO:",
