--- a/app/i18n/locales/ru-RU.json
+++ b/app/i18n/locales/ru-RU.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "Данный API метод еще не реализован.",
   "api.errors.GenericApiError": "Произошла ошибка, пожалуйста, повторите попытку позже.",
   "api.errors.IncorrectPasswordError": "Неверный пароль кошелька.",
-  "api.errors.NotEnoughMoneyToSendError": "Недостаточно ADA для проведения данной транзакции.",
+  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
   "api.errors.PromiseNotCalledYetError": "Result accessed before execution finished.",
   "api.errors.ReportRequestError": "Возникла проблема при отправки запроса в службу поддержки.",
   "api.errors.WalletAlreadyImportedError": "Кошелек, который Вы пытаетесь импортировать, уже существует.",
@@ -128,7 +128,6 @@
   "global.passwordInstructionsPaperWallet": "Примечание: Пароль бумажного кошелька должен содержать не менее <strong>10 символов</strong>.",
   "global.staleTxnWarningLine1": "Ваш кошелек был изменен с момента создания этой транзакции.",
   "global.staleTxnWarningLine2": "Вы все еще можете отправить эту транзакцию, но она может быть неудачной.",
-  "global.unit.ada": "Ada",
   "global.uriExplanation": "Это позволяет легко обмениваться счетами с друзьями и компаниями, просто щелкнув на URL-адрес.",
   "global.uriSchemeTitleLabel": "Платежные Cardano-URL",
   "global.wrongNetwork.address": "Wrong network for address.",
@@ -147,7 +146,7 @@
   "myWallets.wallets.sumInfoText": "Итоговый баланс",
   "networkError.label.message": "ПРЕДУПРЕЖДЕНИЕ: Не удалось подключиться к серверу.<br>Пожалуйста, проверьте подключение к Интернету или <a target='blank' href='https://twitter.com/YoroiWallet'>наш Twitter-аккаунт</a>.<br>Отображаемый баланс и история транзакций могут отображаться неккоректно, пока наши серверы не вернутся в нормальное состояние, но на Ваш фактический баланс это никоим образом не влияет.",
   "nightly.banner.label.message": "ВЫ В YOROI NIGHTLY ({network}).",
-  "noticeBoard.noNoticeText.chooseAPool": "Для просмотра уведомлений, сначала <strong>выберите стейк-пул</strong> и затем делегируйте вашу ADA.",
+  "noticeBoard.noNoticeText.chooseAPool": "To view notifications here, first <strong>choose a stake pool</strong> and delegate your {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "Вы еще не делегировали.",
   "noticeBoard.notice.costChanged.subMessage": "Старая стоимость была {oldCost} {currency} и новая стоимость составляет {newCost} {currency}",
   "noticeBoard.notice.costChanged.title": "Стоимость стейк-пула была изменена",
@@ -178,7 +177,7 @@
   "profile.languageSelect.title": "Выбор языка",
   "profile.nightly.acknowledgedRisks": "Я понимаю риск",
   "profile.nightly.header": "<strong>Yoroi Nightly автоматически обновляется каждую ночь</strong> с последними новейшими функциями, находящимися в процессе разработки. Несмотря на то, что мы никогда намеренно не будем добавлять ошибки или нерабочий код, некоторые функции могут находиться в процессе разработки или содержать ошибки.",
-  "profile.nightly.recommendation1": "Для минимизации риска используете кошельки только с небольшим количеством ADA.",
+  "profile.nightly.recommendation1": "You only use wallets with a small balance to minimize risk.",
   "profile.nightly.recommendation2": "Сообщайте в EMURGO о любых проблемах посредством канала Yoroi Nightly.",
   "profile.nightly.recommendationHeader": "Мы рекомендуем:",
   "profile.nightly.title": "Yoroi Nightly",
@@ -294,7 +293,6 @@
   "sidebar.settings": "Настройки",
   "sidebar.transfer": "Заявить / Перевести",
   "sidebar.wallets": "Мои кошельки",
-  "testnet.label.message": "ПРЕДУПРЕЖДЕНИЕ: Это {network}. ADA не имеет денежной стоимости в {network}. Для получения дополнительной информации, ознакомьтесь с разделом часто задаваемых вопросов {faqLink}",
   "testnet.shelley.label.message": "ВЫ В ТЕСТНЕТЕ ({network}).",
   "transfer.form.instructions.step1.text": "Восстановление Вашего баланса займет около 1 минуты. На следующем этапе Вам будет показана транзакция, которая переместит все Ваши средства. Пожалуйста, тщательно просмотрите детали транзакции. Вам потребуется оплатить стандартную комиссию в сети Cardano за проведение транзакции.",
   "transfer.form.masterkey.input.label": "Мастер-ключ",
@@ -317,7 +315,7 @@
   "transfer.summary.recoveredBalance.label": "Восстановленный баланс",
   "transfer.summary.transactionFee.label": "Комиссия",
   "transfer.summary.transferButton.label": "Перевести средства",
-  "upgradetx.explanation": "We found some ADA in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
+  "upgradetx.explanation": "We found some {ticker} in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "URL успешно скопирован",
   "uri.display.dialog.title": "Сгенерированный URL",
   "uri.display.dialog.usabilityWarning": "Эту ссылку могут открыть только пользователи, у которых в браузере установлено Yoroi-расширение",
@@ -344,8 +342,6 @@
   "wallet.add.optionDialog.create.normalWallet.description": "A standard wallet backed by a recovery phrase.",
   "wallet.add.optionDialog.create.paperWallet.description": "Paper wallets can be created even on devices not connected to the internet which makes them well-suited for single-use cold storage.",
   "wallet.add.optionDialog.restore.dialogTitle": "Восстановить кошелек",
-  "wallet.add.optionDialog.restore.normal24Wallet.description": "If you have a recovery phrase consisting of 24 words, choose this option to restore your wallet.",
-  "wallet.add.optionDialog.restore.normal24Wallet.title": "Enter a 24-word recovery phrase",
   "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "Если Вы создали бумажный кошелек Yoroi (который обычно печатается и хранится в офлайн), Вы можете выбрать этот вариант, чтобы импортировать средства из бумажного кошелька Yoroi.",
@@ -432,14 +428,13 @@
   "wallet.currency.pick.header": "Pick a currency or platform",
   "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
   "wallet.dashboard.empty.text": "Go to the delegation page to choose what stake pool you want to delegate in.",
-  "wallet.dashboard.empty.title": "Вы еще не делегировали вашу ADA",
+  "wallet.dashboard.empty.title": "You have not delegated your {ticker} yet",
   "wallet.dashboard.epochEndTitle": "Время до конца эпохи",
   "wallet.dashboard.epochProgress": "Прогресс эпохи",
   "wallet.dashboard.epochTooltip": "Note: only the first reward after delegating will take {numEpochs} epochs. Afterwards, rewards come every epoch.",
   "wallet.dashboard.graph.dayToggleLabel": "День (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "Эпоха ({epochLength} дней)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Эпоха (1 день)",
-  "wallet.dashboard.graph.tooltip.epoch": "Всего отправлено ADA",
   "wallet.dashboard.graphType.costs": "Стоимость",
   "wallet.dashboard.graphType.positions": "Позиции",
   "wallet.dashboard.lessthan.header": "Существует множество причин из-за которых вы могли получить меньше наград, чем ожидали. Здесь мы перечислили некоторые из них",
@@ -468,12 +463,12 @@
   "wallet.dashboard.stakePool.stake": "Стейк",
   "wallet.dashboard.stakePool.title": "Делегировано в стейк-пул",
   "wallet.dashboard.stakePool.viewWebpage": "View pool webpage",
-  "wallet.dashboard.summary.adaTitle": "Всего ADA",
+  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "Всего делегировано",
-  "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA можно исправить",
-  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} ADA нельзя исправить",
-  "wallet.dashboard.summary.mangled.line1": "В вашем кошельке есть {adaAmount} ADA с другими настройками делегирования.",
-  "wallet.dashboard.summary.mangled.line2": "Мы рекомендуем {transactionMessage} делегировать ADA",
+  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
+  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preferences.",
+  "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "совершить транзакцию",
   "wallet.dashboard.summary.note": "Меньше, чем Вы ожидали?",
   "wallet.dashboard.summary.rewardsTitle": "Всего Наград",
@@ -499,7 +494,7 @@
   "wallet.delegation.transaction.success.explanation": "Отслеживайте статус стейк-пула и оставшееся время для получения награды на странице Информационной панели",
   "wallet.delegation.transaction.success.title": "Успешно делегировано",
   "wallet.deprecation.byronLine1": "The Shelley protocol upgrade adds a new Shelley wallet type which supports delegation.",
-  "wallet.deprecation.byronLine2": "To delegate your ADA you will need to upgrade to a Shelley wallet.",
+  "wallet.deprecation.byronLine2": "To delegate your {ticker} you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "Необходимые разрешения не были предоставлены пользователем. Повторите попытку.",
   "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
   "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
@@ -554,12 +549,12 @@
   "wallet.receive.page.internalWarning1": "Внутренние адреса (или «заменяющие» адреса) поддерживают вашу конфиденциальность, скрывая, какие адреса принадлежат вам в блокчейне",
   "wallet.receive.page.internalWarning2": "здесь показаны адреса в целях личного аудита и <strong>никогда</strong> не должны использоваться.",
   "wallet.receive.page.label": "Label",
-  "wallet.receive.page.mangledWarning1": "Искаженные адреса включены в общий баланс ADA, но имеют неправильные настройки делегирования",
+  "wallet.receive.page.mangledWarning1": "Mangled addresses contribute to your {ticker} balance but have the incorrect delegation preference",
   "wallet.receive.page.noResultsFoundLabel": "No results found",
   "wallet.receive.page.notFoundAnyAddresses": "We couldn't find any addresses matching your filter.",
   "wallet.receive.page.outputAmountUTXO": "Balance (UTXO sum)",
   "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
-  "wallet.receive.page.rewardAddressLine2": "You cannot send ADA to reward addresses, but we show it for personal auditing purposes",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send {ticker} to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "Правильные настройки делегирования",
   "wallet.receive.page.verifyAddressLabel": "Проверить адрес",
   "wallet.receive.page.walletAddressLabel": "Адрес Вашего кошелька",
@@ -604,13 +599,13 @@
   "wallet.send.confirmationDialog.totalLabel": "Итого",
   "wallet.send.confirmationDialog.walletPasswordFieldPlaceholder": "Введите Ваш пароль",
   "wallet.send.confirmationDialog.walletPasswordLabel": "Пароль",
-  "wallet.send.form.amount.equalsAda": "равно {amount} ADA",
   "wallet.send.form.calculatingFee": "Расчет комиссии...",
   "wallet.send.form.cannotSendToLegacy": "Вы не делать переводы на старые адреса (любые адреса, которые были созданы до 29-го ноября 2019 года)",
+  "wallet.send.form.cannotSendToP2SH": "You cannot send to pay-to-script-hash addresses",
   "wallet.send.form.cannotSendToReward": "You cannot send to a reward account",
   "wallet.send.form.errors.invalidAddress": "Пожалуйста, введите действительный адрес.",
   "wallet.send.form.errors.invalidAmount": "Пожалуйста, введите правильную сумму.",
-  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} ADA.",
+  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} {ticker}.",
   "wallet.send.form.receiver.hint": "Адрес кошелька",
   "wallet.send.form.receiver.label": "Получатель",
   "wallet.send.form.sendAll.checkboxLabel": "Отправить все {currency}",
@@ -711,12 +706,12 @@
   "wallet.transfer.deregister.line5": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
   "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
-  "wallet.transfer.instruction": "Любая заявленная ADA будет переведена на Ваш текущий выбранный кошелек",
+  "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "Вам НЕ нужно отменять делегирование перед сменой пула",
   "wallet.undelegation.transaction.explanationLine2": "Чтобы разделегирование вступило в силу необходимо 2 эпохи после окончания текущей эпохи",
   "wallet.unsupported.subtitle": "The selected wallet does not support this functionality",
   "wallet.unsupported.title": "Wallet type not supported",
-  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} ADA from your deposit",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Скопировать в буфер обмена",
   "widgets.explorer.tooltip": "Перейти на {websiteName}",
   "widgets.warningBox.headerText": "ВНИМАНИЕ:",
