--- a/app/i18n/locales/zh-Hans.json
+++ b/app/i18n/locales/zh-Hans.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "尚未实现此 API 方法。",
   "api.errors.GenericApiError": "发生错误，请稍后重试。",
   "api.errors.IncorrectPasswordError": "钱包密码不正确。",
-  "api.errors.NotEnoughMoneyToSendError": "没有足够的 ADA 进行此交易。",
+  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
   "api.errors.PromiseNotCalledYetError": "Result accessed before execution finished.",
   "api.errors.ReportRequestError": "发送支援请求时出现问题。",
   "api.errors.WalletAlreadyImportedError": "您要导入的钱包已存在。",
@@ -128,7 +128,6 @@
   "global.passwordInstructionsPaperWallet": "注意: 纸钱包密码长度至少为<strong>10个字符</strong>。",
   "global.staleTxnWarningLine1": "钱包自您创建此交易后已有变动。",
   "global.staleTxnWarningLine2": "您仍可以发送此交易但可能失败。",
-  "global.unit.ada": "Ada",
   "global.uriExplanation": "这些功能使您只需单击URL，即可轻松与朋友和企业共享发票。",
   "global.uriSchemeTitleLabel": "Cardano付款网址",
   "global.wrongNetwork.address": "Wrong network for address.",
@@ -147,7 +146,7 @@
   "myWallets.wallets.sumInfoText": "钱包总余额",
   "networkError.label.message": "警告：与服务器的连接失败。<br>请检查您的互联网连接或<a target='blank' href='https://twitter.com/YoroiWallet'>我们的Twitter帐户</a>。<br> 在我们的服务器恢复正常之前，显示的余额和交易记录可能不正确，但您的实际余额不受影响。",
   "nightly.banner.label.message": "你正在使用YOROI NIGHTLY({network}).",
-  "noticeBoard.noNoticeText.chooseAPool": "要查看通知，请先<strong>选择一个权益池</strong> 委托您的ADA。",
+  "noticeBoard.noNoticeText.chooseAPool": "To view notifications here, first <strong>choose a stake pool</strong> and delegate your {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "你尚未委托你的ADA.",
   "noticeBoard.notice.costChanged.subMessage": "原有的费用为{oldCost}{currency}，新的费用为{newCost}{currency}",
   "noticeBoard.notice.costChanged.title": "权益池手续费已改变",
@@ -178,7 +177,7 @@
   "profile.languageSelect.title": "语言选择",
   "profile.nightly.acknowledgedRisks": "我了解此风险",
   "profile.nightly.header": "<strong>Yoroi Nightly每24小时自动更新</strong> ——带有最新正在开发中的先行功能。尽管我们绝不会故意推送漏洞或故障代码，但是先行功能因在开发中可能仍然包含错误。",
-  "profile.nightly.recommendation1": "您只使用少量小额的ADA来体验先行版钱包以最大程度的降低风险。",
+  "profile.nightly.recommendation1": "You only use wallets with a small balance to minimize risk.",
   "profile.nightly.recommendation2": "如果您遇到任何问题，可以通过Yoroi Nightly频道向EMURGO报告。",
   "profile.nightly.recommendationHeader": "我们建议：",
   "profile.nightly.title": "Yoroi Nightly",
@@ -294,7 +293,6 @@
   "sidebar.settings": "设置",
   "sidebar.transfer": "获取/转移",
   "sidebar.wallets": "我的钱包",
-  "testnet.label.message": "警告：这是一个网络 {network} 。网络上的ADA并没有货币价值。有关更多资讯，请查看{faqLink} 上的常见问题。",
   "testnet.shelley.label.message": "您正在使用测试网网络({network})。",
   "transfer.form.instructions.step1.text": "恢复余额大约需要1分钟。 在下一步，您将看到一笔交易，该交易将移动您的所有资金。 请仔细阅读交易细节。 您需要在Cardano网络上支付标准交易费用才能进行交易。",
   "transfer.form.masterkey.input.label": "主密钥",
@@ -317,7 +315,7 @@
   "transfer.summary.recoveredBalance.label": "恢复的余额",
   "transfer.summary.transactionFee.label": "交易手续费",
   "transfer.summary.transferButton.label": "转移资金",
-  "upgradetx.explanation": "我们发现了你Byron时期的钱包中尚有ADA。请问需要转移到新的Shelly时期钱包吗？",
+  "upgradetx.explanation": "We found some {ticker} in your Byron-era wallet. Would you like to transfer it to your new Shelley wallet?",
   "uri.display.dialog.copy.notification": "成功复制链接地址",
   "uri.display.dialog.title": "生成链接",
   "uri.display.dialog.usabilityWarning": "只有在浏览器上安装了Yoroi的用户才能打开此链接",
@@ -344,8 +342,6 @@
   "wallet.add.optionDialog.create.normalWallet.description": "一个采用恢复助寄词的标准钱包。",
   "wallet.add.optionDialog.create.paperWallet.description": "纸钱也包能在没有互联网的电脑上创建，会更适合冷存储单次使用。",
   "wallet.add.optionDialog.restore.dialogTitle": "恢复钱包",
-  "wallet.add.optionDialog.restore.normal24Wallet.description": "如果你有24词恢复助记词，选择这个选项恢复钱包。",
-  "wallet.add.optionDialog.restore.normal24Wallet.title": "输入24个恢复助记词",
   "wallet.add.optionDialog.restore.normalWallet.description": "If you have a recovery phrase consisting of {length} words, choose this option to restore your wallet.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Enter a {length}-word recovery phrase",
   "wallet.add.optionDialog.restore.paperWallet.description": "如果您已生成了一个Yoroi纸钱包（通常打印后离线保存），您可以选择此选项将纸钱包中的资金导入。",
@@ -432,14 +428,13 @@
   "wallet.currency.pick.header": "选择一个货币或交易平台",
   "wallet.currency.pick.testnetDescription": "Testnet are alternative chain to be used for testing. This allows application developers or testers to experiment, without having to use real coins.",
   "wallet.dashboard.empty.text": "前往委托界面选择你想要委托的权益池。",
-  "wallet.dashboard.empty.title": "你尚未委托你的ADA",
+  "wallet.dashboard.empty.title": "You have not delegated your {ticker} yet",
   "wallet.dashboard.epochEndTitle": "距离本时代结束",
   "wallet.dashboard.epochProgress": "时代进展",
   "wallet.dashboard.epochTooltip": "Note: only the first reward after delegating will take {numEpochs} epochs. Afterwards, rewards come every epoch.",
   "wallet.dashboard.graph.dayToggleLabel": "天（UTC）",
   "wallet.dashboard.graph.epochAxisLabel": "时代({epochLength} 天)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "时代(1 天)",
-  "wallet.dashboard.graph.tooltip.epoch": "总ADA发送",
   "wallet.dashboard.graphType.costs": "花费",
   "wallet.dashboard.graphType.positions": "位置",
   "wallet.dashboard.lessthan.header": "有很多因素导致您获得的奖励少于您的预期。我们在这里列出一些常见的",
@@ -468,12 +463,12 @@
   "wallet.dashboard.stakePool.stake": "权益",
   "wallet.dashboard.stakePool.title": "已委托的权益池",
   "wallet.dashboard.stakePool.viewWebpage": "查看权益池网站",
-  "wallet.dashboard.summary.adaTitle": "ADA总量",
+  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "委托总量",
-  "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA可以更正",
-  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} ADA不可更正",
-  "wallet.dashboard.summary.mangled.line1": "您的钱包里 {adaAmount} ADA存在不同的授权偏好。",
-  "wallet.dashboard.summary.mangled.line2": "我们推荐通过 {transactionMessage} 来委托ADA",
+  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} can be corrected",
+  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} cannot be corrected",
+  "wallet.dashboard.summary.mangled.line1": "Your wallet has {adaAmount} {ticker} with a different delegation preferences.",
+  "wallet.dashboard.summary.mangled.line2": "We recommend to {transactionMessage} to delegate the {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "进行一笔交易",
   "wallet.dashboard.summary.note": "比预期少",
   "wallet.dashboard.summary.rewardsTitle": "收益总量",
@@ -499,7 +494,7 @@
   "wallet.delegation.transaction.success.explanation": "在总览页面了解权益池状态以及还有多久能收到权益。",
   "wallet.delegation.transaction.success.title": "委托成功",
   "wallet.deprecation.byronLine1": "Shelly版本升级增加了新的Shelly钱包类型，能够支持委托。",
-  "wallet.deprecation.byronLine2": "如欲委托ADA，请升级至支持Shelly版本的钱包。",
+  "wallet.deprecation.byronLine2": "To delegate your {ticker} you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "用户未授予必要的权限。请重试。",
   "wallet.hw.incorrectDevice": "Incorrect device detected. Expected device {expectedDeviceId}, but got device {responseDeviceId}. Please plug in the correct device",
   "wallet.hw.incorrectVersion": "Incorrect device version detected. We support version {supportedVersions} but you have version {responseVersion}.",
@@ -554,12 +549,12 @@
   "wallet.receive.page.internalWarning1": "内部地址 (或 \"更改\" 地址) 通过隐藏区块链上属于您的地址来维护您的隐私",
   "wallet.receive.page.internalWarning2": "此处显示的地址仅供个人审核之用，<strong>永远</strong>不要使用。",
   "wallet.receive.page.label": "标签",
-  "wallet.receive.page.mangledWarning1": "错乱的地址会累计到您的ADA余额，但是授权偏好不同",
+  "wallet.receive.page.mangledWarning1": "Mangled addresses contribute to your {ticker} balance but have the incorrect delegation preference",
   "wallet.receive.page.noResultsFoundLabel": "未发现结果",
   "wallet.receive.page.notFoundAnyAddresses": "无法找到复合您的搜索条件的任何地址",
   "wallet.receive.page.outputAmountUTXO": "余额（UTXO总和）",
   "wallet.receive.page.rewardAddressLine1": "Your reward address holds your rewards and is used to validate any changes to your delegation preference",
-  "wallet.receive.page.rewardAddressLine2": "您无法将ADA发送至奖励地址",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send {ticker} to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "纠正授权偏好",
   "wallet.receive.page.verifyAddressLabel": "校验地址",
   "wallet.receive.page.walletAddressLabel": "您的钱包地址",
@@ -604,13 +599,13 @@
   "wallet.send.confirmationDialog.totalLabel": "总计",
   "wallet.send.confirmationDialog.walletPasswordFieldPlaceholder": "请输入您的支付密码",
   "wallet.send.confirmationDialog.walletPasswordLabel": "支付密码",
-  "wallet.send.form.amount.equalsAda": "等于 {amount} ADA",
   "wallet.send.form.calculatingFee": "正在计算手续费...",
   "wallet.send.form.cannotSendToLegacy": "您无法向旧有交易地址（2019年11月29日前创建的地址）发送ADA。",
+  "wallet.send.form.cannotSendToP2SH": "You cannot send to pay-to-script-hash addresses",
   "wallet.send.form.cannotSendToReward": "你不能发送至一个奖励账户",
   "wallet.send.form.errors.invalidAddress": "请输入有效地址。",
   "wallet.send.form.errors.invalidAmount": "请输入有效金额。",
-  "wallet.send.form.errors.tooSmallUtxo": "无法发送低于{minUtxo} 的ADA",
+  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} {ticker}.",
   "wallet.send.form.receiver.hint": "钱包地址",
   "wallet.send.form.receiver.label": "接收人",
   "wallet.send.form.sendAll.checkboxLabel": "发送所有的 {currency}",
@@ -711,12 +706,12 @@
   "wallet.transfer.deregister.line5": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
   "wallet.transfer.deregister.noNeedToDeregister": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time",
   "wallet.transfer.deregister.title": "Also deregister the staking key?",
-  "wallet.transfer.instruction": "所有的ADA会转移到你目前选择的钱包中",
+  "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "切换权益池之前，您无需先解除委托",
   "wallet.undelegation.transaction.explanationLine2": "撤销委托要在当前时代结束后的2个时代才能生效",
   "wallet.unsupported.subtitle": "所选的钱包不支持此功能",
   "wallet.unsupported.title": "钱包类型暂不支持",
-  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} ADA from your deposit",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "复制到剪贴板",
   "widgets.explorer.tooltip": "前往{websiteName}",
   "widgets.warningBox.headerText": "注意：",
