--- a/app/i18n/locales/fr-FR.json
+++ b/app/i18n/locales/fr-FR.json
@@ -2,7 +2,7 @@
   "api.errors.ApiMethodNotYetImplementedError": "Cette méthode d’API n’est pas encore implémentée.",
   "api.errors.GenericApiError": "Une erreur s’est produite, veuillez réessayer ultérieurement.",
   "api.errors.IncorrectPasswordError": "Mot de passe incorrect.",
-  "api.errors.NotEnoughMoneyToSendError": "Fonds insuffisants pour effectuer cette transaction.",
+  "api.errors.NotEnoughMoneyToSendError": "Not enough funds to make this transaction.",
   "api.errors.PromiseNotCalledYetError": "Résultat accédé avant la fin de l'exécution.",
   "api.errors.ReportRequestError": "Il y a eu un problème avec l'envoi de la demande.",
   "api.errors.WalletAlreadyImportedError": "Le wallet que vous essayez d'importer existe déjà.",
@@ -128,7 +128,6 @@
   "global.passwordInstructionsPaperWallet": "Remarque : le mot de passe du Wallet Papier doit contenir au moins <strong>10 caractères</strong>.",
   "global.staleTxnWarningLine1": "Votre wallet a changé depuis que vous avez créé cette transaction.",
   "global.staleTxnWarningLine2": "Vous pouvez toujours envoyer cette transaction, mais elle pourrait échouer.",
-  "global.unit.ada": "Ada",
   "global.uriExplanation": "Ceux-ci vous permettent de partager facilement vos factures avec vos amis et entreprises en cliquant simplement sur une URL.",
   "global.uriSchemeTitleLabel": "URLs de Paiement Cardano",
   "global.wrongNetwork.address": "Réseau incorrect pour l'adresse.",
@@ -147,7 +146,7 @@
   "myWallets.wallets.sumInfoText": "Solde total",
   "networkError.label.message": "Avertissement : La connexion au serveur a échoué.<br>Veuillez vérifier votre connexion internet ou <a target='blank' href='https://twitter.com/YoroiWallet'>notre compte Twitter</a>.<br>Le solde affiché ainsi que l'historique des transactions peuvent apparaître erronés jusqu'à ce que la situation sur nos serveurs revienne à la normale, mais votre solde réel n'est pas affecté.",
   "nightly.banner.label.message": "VOUS ÊTES SUR YOROI NIGHTLY ({network}).",
-  "noticeBoard.noNoticeText.chooseAPool": "Pour voir les notifications ici, commencez par <strong>choisir un groupe d'enjeu (pool)</strong> et déléguez vos ADA.",
+  "noticeBoard.noNoticeText.chooseAPool": "Pour voir les notifications ici, commencez par <strong>choisir un groupe d'enjeu</strong> et déléguez vos {ticker}.",
   "noticeBoard.noNoticeText.notDelegatedYet": "Vous n'avez pas encore délégué d'enjeu.",
   "noticeBoard.notice.costChanged.subMessage": "L'ancien coût était de {oldCost} {currency} et le nouveau coût est de {newCost} {currency}",
   "noticeBoard.notice.costChanged.title": "Les coûts du groupe d'enjeu (pool) ont changé",
@@ -294,7 +293,6 @@
   "sidebar.settings": "Paramètres",
   "sidebar.transfer": "Réclamation / Transfert",
   "sidebar.wallets": "Mes wallets",
-  "testnet.label.message": "AVERTISSEMENT : Il s’agit d’un réseau {network}. ADA n’a ici aucune valeur monétaire. Pour plus d’informations, veuillez consulter la FAQ à {faqLink}",
   "testnet.shelley.label.message": "VOUS ÊTES SUR LE RÉSEAU TEST ({network}).",
   "transfer.form.instructions.step1.text": "La restauration du solde prend en moyenne 1 minute. Lors de l'étape suivante, vous verrez une transaction se proposer à vous afin de déplacer tous vos fonds vers Yoroi. Veuillez vérifier avec minutie les détails de la transaction. Vous devrez vous acquitter des frais de transactions standards sur le réseau Cardano afin d'effectuer la transaction.",
   "transfer.form.masterkey.input.label": "Clé maître",
@@ -317,7 +315,7 @@
   "transfer.summary.recoveredBalance.label": "Solde recouvert",
   "transfer.summary.transactionFee.label": "Frais de transaction",
   "transfer.summary.transferButton.label": "Transférer des fonds",
-  "upgradetx.explanation": "Nous avons trouvé des ADA dans votre portefeuille de l'ère Byron. Voulez-vous les transférer dans votre nouveau portefeuille Shelley ?",
+  "upgradetx.explanation": "Nous avons trouvé des {ticker} dans votre portefeuille de l'ère Byron. Voulez-vous les transférer dans votre nouveau portefeuille Shelley ?",
   "uri.display.dialog.copy.notification": "URL copiée avec succès",
   "uri.display.dialog.title": "URL générée",
   "uri.display.dialog.usabilityWarning": "Ce lien ne peut être ouvert que par des utilisateurs ayant installé Yoroi sur leurs navigateurs",
@@ -344,8 +342,6 @@
   "wallet.add.optionDialog.create.normalWallet.description": "Un portefeuille standard soutenu par une phrase de rétablissement.",
   "wallet.add.optionDialog.create.paperWallet.description": "Les portefeuilles en papier peuvent être créés même sur des appareils non connectés à l'internet, ce qui les rend bien adaptés à la conservation au froid à usage unique.",
   "wallet.add.optionDialog.restore.dialogTitle": "Restaurer le wallet",
-  "wallet.add.optionDialog.restore.normal24Wallet.description": "Si vous avez une phrase de récupération de 24 mots, choisissez cette option pour restaurer votre wallet.",
-  "wallet.add.optionDialog.restore.normal24Wallet.title": "Entrez une phrase de récupération de 24 mots",
   "wallet.add.optionDialog.restore.normalWallet.description": "Si vous avez une phrase de récupération de {length} mots, choisissez cette option pour restaurer votre wallet.",
   "wallet.add.optionDialog.restore.normalWallet.title": "Entrez une phrase de récupération de {length} mots",
   "wallet.add.optionDialog.restore.paperWallet.description": "Si vous avez généré un wallet papier Yoroi (généralement imprimé et conservé hors ligne), vous pouvez choisir cette option pour importer les fonds de ce wallet papier Yoroi.",
@@ -432,14 +428,13 @@
   "wallet.currency.pick.header": "Choisissez une devise ou une plateforme",
   "wallet.currency.pick.testnetDescription": "Les Testnets sont des chaînes alternatives à utiliser pour les tests. Cela permet aux développeurs d'applications ou aux testeurs d'expérimenter, sans devoir utiliser de vraies monnaies.",
   "wallet.dashboard.empty.text": "Allez sur la page de délégation pour choisir le groupe d'enjeu auquel vous souhaitez déléguer.",
-  "wallet.dashboard.empty.title": "Vous n'avez pas encore délégué vos ADA",
+  "wallet.dashboard.empty.title": "Vous n'avez pas encore délégué vos {ticker}",
   "wallet.dashboard.epochEndTitle": "Temps avant la fin de l'époque",
   "wallet.dashboard.epochProgress": "Progrès dans l'époque",
   "wallet.dashboard.epochTooltip": "Remarque : Après avoir délégué, la première récompense vous sera versée après {numEpochs} époques. Par la suite, les récompenses viendront à chaque époque.",
   "wallet.dashboard.graph.dayToggleLabel": "Jour (UTC)",
   "wallet.dashboard.graph.epochAxisLabel": "Époque ({epochLength} jours)",
   "wallet.dashboard.graph.singleEpochAxisLabel": "Époque (1 jour)",
-  "wallet.dashboard.graph.tooltip.epoch": "Total des ADA envoyés",
   "wallet.dashboard.graphType.costs": "Coûts",
   "wallet.dashboard.graphType.positions": "Positions",
   "wallet.dashboard.lessthan.header": "Il y a de nombreuses raisons pour lesquelles vous pourriez obtenir moins de récompenses que prévu. Nous en énumérons quelques-unes ici",
@@ -468,12 +463,12 @@
   "wallet.dashboard.stakePool.stake": "Enjeu",
   "wallet.dashboard.stakePool.title": "Stake Pool délégué",
   "wallet.dashboard.stakePool.viewWebpage": "Voir la page web du groupe d'enjeu",
-  "wallet.dashboard.summary.adaTitle": "Total ADA",
+  "wallet.dashboard.summary.adaTitle": "Total {ticker}",
   "wallet.dashboard.summary.delegatedTitle": "Total Délégué",
-  "wallet.dashboard.summary.mangled.can": "{adaAmount} ADA peuvent être corrigés",
-  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} ADA ne peuvent pas être corrigés",
-  "wallet.dashboard.summary.mangled.line1": "Votre portefeuille a {adaAmount} ADA avec des préférences de délégation différentes.",
-  "wallet.dashboard.summary.mangled.line2": "Nous recommandons de {transactionMessage} pour déléguer l'ADA",
+  "wallet.dashboard.summary.mangled.can": "{adaAmount} {ticker} peuvent être corrigés",
+  "wallet.dashboard.summary.mangled.cannot": "{adaAmount} {ticker} ne peuvent pas être corrigés",
+  "wallet.dashboard.summary.mangled.line1": "Votre portefeuille a {adaAmount} {ticker} avec des préférences de délégation différentes.",
+  "wallet.dashboard.summary.mangled.line2": "Nous recommandons de {transactionMessage} pour déléguer vos {ticker}",
   "wallet.dashboard.summary.mangled.makeTx": "faire une transaction",
   "wallet.dashboard.summary.note": "Moins que ce que vous aviez prévu ?",
   "wallet.dashboard.summary.rewardsTitle": "Total des Récompenses",
@@ -499,7 +494,7 @@
   "wallet.delegation.transaction.success.explanation": "Suivre l'état du groupe d'enjeu (pool) et le temps restant pour recevoir une récompense à partir de la page du tableau de bord.",
   "wallet.delegation.transaction.success.title": "Délégation réussie",
   "wallet.deprecation.byronLine1": "La mise à jour du protocole Shelley ajoute un nouveau type de portefeuille Shelley qui permet la délégation.",
-  "wallet.deprecation.byronLine2": "Pour déléguer votre ADA, vous devrez passer à un portefeuille Shelley.",
+  "wallet.deprecation.byronLine2": "To delegate your {ticker} you will need to upgrade to a Shelley wallet.",
   "wallet.hw.common.error.101": "Les autorisations nécessaires n'ont pas été fournies par l'utilisateur. Veuillez réessayer.",
   "wallet.hw.incorrectDevice": "Appareil incorrect détecté. Appareil attendu {expectedDeviceId}, mais {responseDeviceId} a été obtenu. Veuillez brancher le bon appareil",
   "wallet.hw.incorrectVersion": "Détection d'une version incorrecte de l'appareil. Nous supportons la version {supportedVersions} mais vous avez la version {responseVersion}.",
@@ -554,12 +549,12 @@
   "wallet.receive.page.internalWarning1": "Les adresses internes (ou adresses de \"change\") préservent votre vie privée en masquant les adresses qui vous appartiennent sur la blockchain",
   "wallet.receive.page.internalWarning2": ": ces adresses sont indiquées ici à des fins d'audit personnel et ne doivent <strong>jamais</strong> être utilisées.",
   "wallet.receive.page.label": "Étiquette",
-  "wallet.receive.page.mangledWarning1": "Les adresses mélangées contribuent à votre solde en ADA mais ont une préférence de délégation incorrecte",
+  "wallet.receive.page.mangledWarning1": "Mangled addresses contribute to your {ticker} balance but have the incorrect delegation preference",
   "wallet.receive.page.noResultsFoundLabel": "Pas de résultats trouvés",
   "wallet.receive.page.notFoundAnyAddresses": "Nous n'avons trouvé aucune adresse correspondant à vos critères.",
   "wallet.receive.page.outputAmountUTXO": "Solde (somme des UTXO)",
   "wallet.receive.page.rewardAddressLine1": "Votre adresse de récompense contient vos récompenses et est utilisée pour valider tout changement dans vos préférences de délégation",
-  "wallet.receive.page.rewardAddressLine2": "Vous ne pouvez pas envoyer d'ADA sur des adresses de récompenses, mais nous vous le montrons à des fins d'audit personnel",
+  "wallet.receive.page.rewardAddressLine2": "You cannot send {ticker} to reward addresses, but we show it for personal auditing purposes",
   "wallet.receive.page.unmangeLabel": "Corriger la préférence de délégation",
   "wallet.receive.page.verifyAddressLabel": "Vérifier l'adresse",
   "wallet.receive.page.walletAddressLabel": "Votre adresse de wallet",
@@ -604,13 +599,13 @@
   "wallet.send.confirmationDialog.totalLabel": "Total",
   "wallet.send.confirmationDialog.walletPasswordFieldPlaceholder": "Veuillez entrer votre mot de passe de paiement",
   "wallet.send.confirmationDialog.walletPasswordLabel": "Mot de passe de paiement",
-  "wallet.send.form.amount.equalsAda": "équivaut à {amount} ADA",
   "wallet.send.form.calculatingFee": "Calcul des frais de transaction...",
   "wallet.send.form.cannotSendToLegacy": "Vous ne pouvez pas envoyer à des adresses de type Legacy (toute adresse créée avant le 29 novembre 2019)",
+  "wallet.send.form.cannotSendToP2SH": "You cannot send to pay-to-script-hash addresses",
   "wallet.send.form.cannotSendToReward": "Vous ne pouvez pas envoyer à un compte de compensation",
   "wallet.send.form.errors.invalidAddress": "Veuillez entrer une adresse valide.",
   "wallet.send.form.errors.invalidAmount": "Veuillez entrer un montant valide.",
-  "wallet.send.form.errors.tooSmallUtxo": "Vous ne pouvez pas envoyer moins de {minUtxo} ADA.",
+  "wallet.send.form.errors.tooSmallUtxo": "Cannot send less than {minUtxo} {ticker}.",
   "wallet.send.form.receiver.hint": "Adresse du wallet",
   "wallet.send.form.receiver.label": "Destinataire",
   "wallet.send.form.sendAll.checkboxLabel": "Envoyer tous les {currency}",
@@ -711,12 +706,12 @@
   "wallet.transfer.deregister.line5": "La désinscription signifie que cette clé d'enjeu ne sera plus récompensée tant que vous ne l'aurez pas réenregistrée (généralement en déléguant à nouveau à un pool)",
   "wallet.transfer.deregister.noNeedToDeregister": "Vous n'avez PAS besoin de vous désinscrire pour déléguer à un autre pool. Vous pouvez modifier votre préférence de délégation à tout moment",
   "wallet.transfer.deregister.title": "Désinscrire également la clé de mise en jeu ?",
-  "wallet.transfer.instruction": "Tout ADA réclamé sera transféré dans votre portefeuille actuellement sélectionné",
+  "wallet.transfer.instruction": "Any {ticker} claimed will be transferred to your currently selected wallet",
   "wallet.undelegation.transaction.explanationLine1": "Vous n'avez PAS besoin d'arrêter une délégation avant de changer de groupe d'enjeu (pool)",
   "wallet.undelegation.transaction.explanationLine2": "Cela prendra 2 époques après la fin de l'époque courante pour que votre choix d'arrêter de déléguer soit effectif",
   "wallet.unsupported.subtitle": "Le portefeuille sélectionné ne prend pas en charge cette fonctionnalité",
   "wallet.unsupported.title": "Type de portefeuille non supporté",
-  "wallet.withdrawal.transaction.unregister": "Cette opération va désinscrire une ou plusieurs clés de staking, ce qui vous permettra de récupérer votre dépôt de {refundAmount} ADA",
+  "wallet.withdrawal.transaction.unregister": "This transaction will unregister one or more staking keys, giving you back your {refundAmount} {ticker} from your deposit",
   "widgets.copyableaddress.addressCopyTooltipMessage": "Copier dans le presse-papier",
   "widgets.explorer.tooltip": "Aller sur {websiteName}",
   "widgets.warningBox.headerText": "ATTENTION :",
